--- a/src/components/tariffs-page/tariffs-desktop/tariffsDesktop.scss
+++ b/src/components/tariffs-page/tariffs-desktop/tariffsDesktop.scss
@@ -1,4 +1,5 @@
 .tariffs {
+	position: relative;
 	padding-top: 90px;
 	@media (max-width: 1200px) {
 		padding-top: 70px;
@@ -27,6 +28,14 @@
 	font-size: 56px;
 	font-weight: 700;
 	line-height: 56px;
+	@media (max-width: 1200px) {
+		padding-bottom: 25px;
+	}
+	@media (max-width: 640px) {
+		font-size: 33px;
+		line-height: 33px;
+		padding-bottom: 15px;
+	}
 }
 .tariffs-body {
 	box-sizing: border-box;
