--- a/src/components/main-page/Pluses/styles.module.scss
+++ b/src/components/main-page/Pluses/styles.module.scss
@@ -11,8 +11,9 @@
 }
 
 .text {
-	@media (max-width: 480px) {
-		max-width: 200px !important;
+	@media (max-width: 640px) {
+		max-width: 75% !important;
+		padding-bottom: 50px;
 	}
 }
 
@@ -112,6 +113,37 @@
 		font-size: 24px;
 		line-height: 1.2;
 		color: #494857;
+		@media (max-width: 1440px) {
+			font-size: 19px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 16px;
+		}
+		@media (max-width: 1024px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 992px) {
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 25px;
+			font-weight: 700;
+			line-height: 100%;
+			letter-spacing: 0px;
+			text-align: left;
+		}
+
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
 	}
 	p {
 		font-family: 'Roboto', sans-serif;
@@ -121,8 +153,41 @@
 		/* line-height: 22px; */
 		line-height: 1.2;
 		padding-top: 20px;
+		@media (max-width: 1280px) {
+			font-size: 15.5px;
+		}
+
+		@media (max-width: 992px) {
+			padding-top: 25px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
+			line-height: 100%;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 15px;
+			line-height: 1.45;
+		}
+		@media (max-width: 640px) {
+			text-align: left;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 14px;
+			line-height: 1.4;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+			line-height: 1.35;
+		}
 		@media (max-width: 992px) {
 			width: 80%;
+		}
+		@media (max-width: 640px) {
+			width: 100%;
 		}
 	}
 	// @media (max-width: 768px) {
@@ -152,6 +217,37 @@
 		font-size: 24px;
 		line-height: 1.2;
 		color: #494857;
+		@media (max-width: 1440px) {
+			font-size: 19px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 16px;
+		}
+		@media (max-width: 1024px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 992px) {
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 25px;
+			font-weight: 700;
+			line-height: 100%;
+			letter-spacing: 0px;
+			text-align: left;
+		}
+
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
 	}
 	p {
 		font-family: 'Roboto', sans-serif;
@@ -161,6 +257,36 @@
 		/* line-height: 22px; */
 		line-height: 1.2;
 		padding-top: 20px;
+		@media (max-width: 1280px) {
+			font-size: 15.5px;
+		}
+
+		@media (max-width: 992px) {
+			padding-top: 25px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
+			line-height: 100%;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 15px;
+			line-height: 1.45;
+		}
+		@media (max-width: 640px) {
+			text-align: left;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 14px;
+			line-height: 1.4;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+			line-height: 1.35;
+		}
 	}
 }
 .pluses_container_3 {
@@ -185,6 +311,37 @@
 		font-size: 24px;
 		line-height: 1.2;
 		color: #494857;
+		@media (max-width: 1440px) {
+			font-size: 19px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 16px;
+		}
+		@media (max-width: 1024px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 992px) {
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 25px;
+			font-weight: 700;
+			line-height: 100%;
+			letter-spacing: 0px;
+			text-align: left;
+		}
+
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
 	}
 	p {
 		font-family: 'Roboto', sans-serif;
@@ -194,6 +351,36 @@
 		/* line-height: 22px; */
 		line-height: 1.2;
 		padding-top: 20px;
+		@media (max-width: 1280px) {
+			font-size: 15.5px;
+		}
+
+		@media (max-width: 992px) {
+			padding-top: 25px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
+			line-height: 100%;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 15px;
+			line-height: 1.45;
+		}
+		@media (max-width: 640px) {
+			text-align: left;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 14px;
+			line-height: 1.4;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+			line-height: 1.35;
+		}
 	}
 }
 .pluses_container_4 {
@@ -218,6 +405,37 @@
 		font-size: 24px;
 		line-height: 1.2;
 		color: #494857;
+		@media (max-width: 1440px) {
+			font-size: 19px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 16px;
+		}
+		@media (max-width: 1024px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 992px) {
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 25px;
+			font-weight: 700;
+			line-height: 100%;
+			letter-spacing: 0px;
+			text-align: left;
+		}
+
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
 	}
 	p {
 		font-family: 'Roboto', sans-serif;
@@ -227,6 +445,36 @@
 		/* line-height: 22px; */
 		line-height: 1.2;
 		padding-top: 20px;
+		@media (max-width: 1280px) {
+			font-size: 15.5px;
+		}
+
+		@media (max-width: 992px) {
+			padding-top: 25px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
+			line-height: 100%;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 15px;
+			line-height: 1.45;
+		}
+		@media (max-width: 640px) {
+			text-align: left;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 14px;
+			line-height: 1.4;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+			line-height: 1.35;
+		}
 	}
 }
 .pluses_container_5 {
@@ -251,6 +499,37 @@
 		font-size: 24px;
 		line-height: 1.2;
 		color: #494857;
+		@media (max-width: 1440px) {
+			font-size: 19px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 16px;
+		}
+		@media (max-width: 1024px) {
+			font-size: 15px;
+		}
+
+		@media (max-width: 992px) {
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 25px;
+			font-weight: 700;
+			line-height: 100%;
+			letter-spacing: 0px;
+			text-align: left;
+		}
+
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
 	}
 	p {
 		font-family: 'Roboto', sans-serif;
@@ -260,6 +539,36 @@
 		/* line-height: 22px; */
 		line-height: 1.2;
 		padding-top: 20px;
+		@media (max-width: 1280px) {
+			font-size: 15.5px;
+		}
+
+		@media (max-width: 992px) {
+			padding-top: 25px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
+			line-height: 100%;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 15px;
+			line-height: 1.45;
+		}
+		@media (max-width: 640px) {
+			text-align: left;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 14px;
+			line-height: 1.4;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+			line-height: 1.35;
+		}
 	}
 }
 
@@ -283,7 +592,15 @@
 		left: 85%;
 	}
 	@media (max-width: 576px) {
-		width: 25%;
+		width: 20%;
 		left: 85%;
+	}
+	@media (max-width: 480px) {
+		width: 25%;
+		left: 80%;
+	}
+	@media (max-width: 360px) {
+		width: 30%;
+		left: 80%;
 	}
 }
