--- a/src/components/layout/header/styles.module.scss
+++ b/src/components/layout/header/styles.module.scss
@@ -84,7 +84,7 @@
 
 		&:hover {
 			color: #58899f;
-			border-bottom: 2px solid var(--accent-color1);
+			border-bottom: 3px solid var(--accent-color1);
 		}
 
 		@media (max-width: 1500px) {
@@ -95,7 +95,7 @@
 			display: none;
 		}
 		&.active {
-			border-bottom: 2px solid var(--accent-color1);
+			border-bottom: 3px solid var(--accent-color1);
 		}
 	}
 }
@@ -158,7 +158,7 @@
 	span {
 		width: 100%;
 		height: 3px;
-		background-color: #494857;
+		background-color: var(--layer-color2);
 		border-radius: 2px;
 		transition: all 0.3s ease;
 	}
