--- a/src/components/main-page/Protection-ring/style.module.scss
+++ b/src/components/main-page/Protection-ring/style.module.scss
@@ -16,21 +16,21 @@
 
 .container {
 	width: 100%;
-	max-width: 1600px;
+	max-width: 1280px;
 	margin: 0 auto;
-	padding: 0 6%;
+	padding: 0 20px;
 
-	@media (max-width: 1280px) {
-		padding: 0 4%;
-	}
+	// @media (max-width: 1200px) {
+	// 	padding: 0 6%;
+	// }
 
-	@media (max-width: 992px) {
-		padding: 0 20px;
-	}
+	// @media (max-width: 992px) {
+	// 	padding: 0 20px;
+	// }
 
-	@media (max-width: 480px) {
-		padding: 0 15px;
-	}
+	// @media (max-width: 480px) {
+	// 	padding: 0 15px;
+	// }
 }
 
 .mobile_title {
@@ -43,7 +43,7 @@
 	text-align: left;
 	margin-bottom: 30px;
 
-	@media (max-width: 1280px) {
+	@media (max-width: 1080px) {
 		display: block;
 		font-size: 32px;
 	}
@@ -68,9 +68,9 @@
 
 .desktop_title {
 	color: rgba(73, 72, 87, 1);
-	font-size: 56px;
+	font-size: 48px;
 	font-weight: 700;
-	line-height: 1.1;
+	line-height: 1;
 	letter-spacing: 0%;
 	margin-bottom: 40px;
 
@@ -82,26 +82,27 @@
 		font-size: 42px;
 	}
 
-	@media (max-width: 1280px) {
+	@media (max-width: 1080px) {
 		display: none;
 	}
 }
 
 .grid {
+	position: relative;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	gap: 60px;
 	align-items: start;
 
-	@media (max-width: 1280px) {
-		// grid-template-columns: 1fr;
-		gap: 40px;
+	@media (max-width: 992px) {
+		grid-template-columns: 1fr;
+		// gap: 40px;
 	}
 
-	@media (max-width: 768px) {
-		gap: 30px;
-		grid-template-columns: 1fr;
-	}
+	// @media (max-width: 768px) {
+	// 	gap: 30px;
+	// 	grid-template-columns: 1fr;
+	// }
 }
 
 .grid_cols_1 {
@@ -119,10 +120,40 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding-top: 40px;
+	// padding-top: 40px;
 
 	@media (max-width: 1280px) {
 		padding-top: 0;
+	}
+	@media (max-width: 992px) {
+		position: absolute;
+		right: 50px;
+		top: 65%;
+		transform: translateY(-50%);
+	}
+	@media (max-width: 925px) {
+		position: absolute;
+		right: 0;
+	}
+	@media (max-width: 800px) {
+		right: -10px;
+	}
+	@media (max-width: 640px) {
+		display: none;
+	}
+}
+
+.ring_list {
+	li {
+		&:nth-child(2) .ring_info p,
+		&:nth-child(3) .ring_info p {
+			@media (max-width: 992px) {
+				width: 55%;
+			}
+			@media (max-width: 640px) {
+				width: 100%;
+			}
+		}
 	}
 }
 
@@ -187,7 +218,7 @@
 		font-family: Roboto, sans-serif;
 		font-size: 16px;
 		font-weight: 400;
-		line-height: 1.4;
+		line-height: 1.2;
 		margin: 0;
 
 		@media (max-width: 1600px) {
@@ -196,7 +227,6 @@
 
 		@media (max-width: 1280px) {
 			font-size: 16px;
-			line-height: 1.5;
 		}
 
 		@media (max-width: 992px) {
@@ -205,17 +235,14 @@
 
 		@media (max-width: 768px) {
 			font-size: 15px;
-			line-height: 1.45;
 		}
 
 		@media (max-width: 480px) {
 			font-size: 14px;
-			line-height: 1.4;
 		}
 
 		@media (max-width: 360px) {
 			font-size: 13.5px;
-			line-height: 1.35;
 		}
 	}
 }
@@ -236,24 +263,23 @@
 		height: 525px;
 	}
 
-	@media (max-width: 1440px) {
-		width: 450px;
-		height: 473px;
-	}
+	// @media (max-width: 992px) {
+	// 	width: 450px;
+	// 	height: 473px;
+	// }
 
-	@media (max-width: 1280px) {
-		width: 280px;
-		height: 300px;
-		margin-top: 100px;
+	// @media (max-width: 1280px) {
+	// 	width: 280px;
+	// 	height: 300px;
+	// 	margin-top: 100px;
+	// }
+
+	@media (max-width: 1080px) {
+		width: 350px;
+		height: 368px;
 	}
 
 	@media (max-width: 768px) {
-		width: 350px;
-		height: 368px;
-		display: none;
-	}
-
-	@media (max-width: 480px) {
 		width: 300px;
 		height: 315px;
 	}
@@ -282,28 +308,28 @@
 		height: 435px;
 	}
 
-	@media (max-width: 1440px) {
-		top: 58px;
-		left: 36px;
-		width: 373px;
-		height: 392px;
-	}
+	// @media (max-width: 992px) {
+	// 	top: 58px;
+	// 	left: 36px;
+	// 	width: 373px;
+	// 	height: 392px;
+	// }
 
-	@media (max-width: 1280px) {
-		top: 45px;
-		left: 30px;
-		width: 220px;
-		height: 235px;
-	}
+	// @media (max-width: 1280px) {
+	// 	top: 45px;
+	// 	left: 30px;
+	// 	width: 220px;
+	// 	height: 235px;
+	// }
 
-	@media (max-width: 768px) {
+	@media (max-width: 1080px) {
 		top: 45px;
 		left: 28px;
 		width: 290px;
 		height: 305px;
 	}
 
-	@media (max-width: 480px) {
+	@media (max-width: 768px) {
 		top: 38px;
 		left: 24px;
 		width: 249px;
@@ -325,7 +351,7 @@
 	width: 400px;
 	height: 430px;
 	box-shadow: inset -4px 4px 5px 0px rgba(0, 0, 0, 0.45);
-	background: rgba(87, 136, 159, 1);
+	background: var(--layer-color2);
 	border-radius: 50%;
 	transform: scaleY(1.03);
 
@@ -336,28 +362,28 @@
 		height: 357px;
 	}
 
-	@media (max-width: 1440px) {
-		top: 119px;
-		left: 75px;
-		width: 299px;
-		height: 321px;
-	}
+	// @media (max-width: 992px) {
+	// 	top: 119px;
+	// 	left: 75px;
+	// 	width: 299px;
+	// 	height: 321px;
+	// }
 
-	@media (max-width: 1280px) {
-		top: 80px;
-		left: 53px;
-		width: 175px;
-		height: 185px;
-	}
+	// @media (max-width: 1280px) {
+	// 	top: 80px;
+	// 	left: 53px;
+	// 	width: 175px;
+	// 	height: 185px;
+	// }
 
-	@media (max-width: 768px) {
+	@media (max-width: 1080px) {
 		top: 92px;
 		left: 58px;
 		width: 232px;
 		height: 249px;
 	}
 
-	@media (max-width: 480px) {
+	@media (max-width: 768px) {
 		top: 79px;
 		left: 50px;
 		width: 199px;
@@ -393,28 +419,28 @@
 		height: 275px;
 	}
 
-	@media (max-width: 1440px) {
-		top: 180px;
-		left: 113px;
-		width: 225px;
-		height: 248px;
-	}
+	// @media (max-width: 992px) {
+	// 	top: 180px;
+	// 	left: 113px;
+	// 	width: 225px;
+	// 	height: 248px;
+	// }
 
-	@media (max-width: 1280px) {
-		top: 100px;
-		left: 70px;
-		width: 140px;
-		height: 150px;
-	}
+	// @media (max-width: 1280px) {
+	// 	top: 100px;
+	// 	left: 70px;
+	// 	width: 140px;
+	// 	height: 150px;
+	// }
 
-	@media (max-width: 768px) {
+	@media (max-width: 1080px) {
 		top: 140px;
 		left: 87px;
 		width: 175px;
 		height: 193px;
 	}
 
-	@media (max-width: 480px) {
+	@media (max-width: 768px) {
 		top: 120px;
 		left: 75px;
 		width: 150px;
@@ -438,7 +464,7 @@
 		width: 35%;
 	}
 
-	@media (max-width: 480px) {
+	@media (max-width: 768px) {
 		width: 30%;
 		max-width: 90px;
 	}
@@ -450,67 +476,67 @@
 }
 
 // Медиа-запросы для мобильных устройств
-@media (max-width: 768px) {
-	.protection_ring {
-		.ring_info {
-			h2 {
-				font-size: 18px;
-			}
+// @media (max-width: 768px) {
+// 	.protection_ring {
+// 		.ring_info {
+// 			h2 {
+// 				font-size: 18px;
+// 			}
 
-			p {
-				font-size: 15px;
-			}
-		}
+// 			p {
+// 				font-size: 15px;
+// 			}
+// 		}
 
-		.rings {
-			width: 320px;
-			height: 336px;
-		}
-	}
-}
+// 		// .rings {
+// 		// 	width: 320px;
+// 		// 	height: 336px;
+// 		// }
+// 	}
+// }
 
-@media (max-width: 480px) {
-	.protection_ring {
-		.mobile_title {
-			font-size: 22px;
-		}
+// @media (max-width: 480px) {
+// 	.protection_ring {
+// 		.mobile_title {
+// 			font-size: 22px;
+// 		}
 
-		.ring_info {
-			h2 {
-				font-size: 17px;
-			}
+// 		.ring_info {
+// 			h2 {
+// 				font-size: 17px;
+// 			}
 
-			p {
-				font-size: 14px;
-			}
-		}
+// 			p {
+// 				font-size: 14px;
+// 			}
+// 		}
 
-		.rings {
-			width: 280px;
-			height: 294px;
-		}
-	}
-}
+// 		.rings {
+// 			width: 280px;
+// 			height: 294px;
+// 		}
+// 	}
+// }
 
-@media (max-width: 360px) {
-	.protection_ring {
-		.mobile_title {
-			font-size: 20px;
-		}
+// @media (max-width: 360px) {
+// 	.protection_ring {
+// 		.mobile_title {
+// 			font-size: 20px;
+// 		}
 
-		.ring_info {
-			h2 {
-				font-size: 16px;
-			}
+// 		.ring_info {
+// 			h2 {
+// 				font-size: 16px;
+// 			}
 
-			p {
-				font-size: 13.5px;
-			}
-		}
+// 			p {
+// 				font-size: 13.5px;
+// 			}
+// 		}
 
-		.rings {
-			width: 240px;
-			height: 252px;
-		}
-	}
-}
+// 		.rings {
+// 			width: 240px;
+// 			height: 252px;
+// 		}
+// 	}
+// }
