--- a/src/components/main-page/Real-benefit/styles.module.scss
+++ b/src/components/main-page/Real-benefit/styles.module.scss
@@ -1,427 +1,270 @@
 .benefit {
-  padding: 80px 0;
+	padding: 80px 0;
 
-  @media (max-width: 992px) {
-    padding: 60px 0;
-  }
+	@media (max-width: 992px) {
+		padding: 60px 0;
+	}
 
-  @media (max-width: 768px) {
-    padding: 40px 0;
-  }
+	@media (max-width: 768px) {
+		padding: 40px 0;
+	}
 
-  @media (max-width: 480px) {
-    padding: 30px 0;
-  }
+	@media (max-width: 480px) {
+		padding: 30px 0;
+	}
 }
 
 .container {
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-  padding: 0 6%;
+	width: 100%;
+	max-width: 1280px;
+	margin: 0 auto;
 
-  @media (max-width: 1280px) {
-    padding: 0 4%;
-  }
-
-  @media (max-width: 992px) {
-    padding: 0 20px;
-  }
-
-  @media (max-width: 480px) {
-    padding: 0 15px;
-  }
+	@media (max-width: 1280px) {
+		padding: 0 20;
+	}
 }
 
 .title {
-  color: rgba(73, 72, 87, 1);
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: 0%;
-  text-align: center;
-  margin-bottom: 40px;
+	color: rgba(73, 72, 87, 1);
+	font-size: 56px;
+	font-weight: 700;
+	line-height: 1.2;
+	letter-spacing: 0%;
+	text-align: center;
+	margin-bottom: 40px;
 
-  @media (max-width: 1600px) {
-    font-size: 48px;
-  }
+	@media (max-width: 1280px) {
+		font-size: 42px;
+	}
 
-  @media (max-width: 1280px) {
-    font-size: 42px;
-  }
+	@media (max-width: 992px) {
+		font-size: 36px;
+		margin-bottom: 30px;
+	}
 
-  @media (max-width: 992px) {
-    font-size: 36px;
-    margin-bottom: 30px;
-  }
+	@media (max-width: 768px) {
+		font-size: 32px;
+		margin-bottom: 25px;
+	}
 
-  @media (max-width: 768px) {
-    font-size: 32px;
-    margin-bottom: 25px;
-  }
+	@media (max-width: 480px) {
+		font-size: 28px;
+		margin-bottom: 20px;
+	}
 
-  @media (max-width: 480px) {
-    font-size: 28px;
-    margin-bottom: 20px;
-  }
-
-  @media (max-width: 360px) {
-    font-size: 26px;
-    margin-bottom: 15px;
-  }
+	@media (max-width: 360px) {
+		font-size: 26px;
+		margin-bottom: 15px;
+	}
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-items: center;
-  gap: 40px;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	justify-items: center;
+	gap: 30px;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 
-  @media (max-width: 1800px) {
-    grid-template-columns: 1fr;
-    max-width: 800px;
-    margin: 0 auto;
-    gap: 30px;
-  }
-
-  @media (max-width: 992px) {
-    gap: 25px;
-  }
-
-  @media (max-width: 768px) {
-    gap: 20px;
-  }
-
-  @media (max-width: 480px) {
-    gap: 15px;
-  }
+	@media (max-width: 1280px) {
+		gap: 20px;
+	}
+	@media (max-width: 992px) {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
-
+.grid_box {
+}
 .grid_item {
-  width: 100%;
-}
-
-.cart_mobile {
-  display: none;
-
-  @media (max-width: 768px) {
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    padding: 20px;
-    gap: 10px;
-    border: 1px solid #d5d5d5;
-    border-radius: 10px;
-
-    .cart_img {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      width: 100%;
-      justify-content: flex-start;
-      gap: 5px;
-
-      text-align: left;
-
-      img {
-        height: 30px;
-        width: 30px;
-      }
-
-      h2 {
-        font-family: Roboto, sans-serif;
-        color: #494857;
-        font-weight: 600;
-        font-size: 20px;
-      }
-    }
-    .cart_text_mobile {
-      p {
-        text-align: left !important;
-        font-family: Roboto, sans-serif;
-        color: #494857;
-      }
-    }
-  }
+	width: 100%;
 }
 
 .cart {
-  padding-top: 40px;
-  display: flex;
-  align-items: flex-start;
-  gap: 30px;
-  border-radius: 12px;
-  padding: 30px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+	position: relative;
+	display: flex;
+	align-items: flex-start;
+	gap: 20px;
+	border-radius: 12px;
+	padding: 20px;
+	transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-  @media (max-width: 1600px) {
-    padding: 25px;
-    gap: 25px;
-  }
+	@media (max-width: 1280px) {
+		gap: 10px;
+	}
 
-  @media (max-width: 1280px) {
-    padding: 22px;
-    gap: 22px;
-    background-color: white;
-  }
-
-  @media (max-width: 992px) {
-    padding-top: 30px;
-    padding: 25px;
-    gap: 25px;
-  }
-
-  @media (max-width: 768px) {
-    display: none;
-  }
-
-  @media (max-width: 480px) {
-    padding: 20px 15px;
-    gap: 15px;
-  }
-
-  @media (max-width: 360px) {
-    padding: 18px 12px;
-    gap: 12px;
-  }
+	@media (max-width: 992px) {
+		padding: 22px;
+		gap: 22px;
+		background-color: white;
+	}
 }
 
 .cart_img {
-  min-width: 25%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	min-width: 25%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 
-  @media (max-width: 768px) {
-    min-width: auto;
-    width: 100%;
-  }
+	@media (max-width: 576px) {
+		justify-content: start;
+		position: absolute;
+		top: 5px;
+		left: 15px;
+	}
 }
 
 .image {
-  width: 200px;
-  height: 200px;
-  object-fit: contain;
+	width: 200px;
+	height: 200px;
+	object-fit: contain;
 
-  @media (max-width: 1600px) {
-    width: 110px;
-    height: 110px;
-  }
+	@media (max-width: 1280px) {
+		width: 150px;
+		height: 150px;
+	}
 
-  @media (max-width: 1280px) {
-    width: 100px;
-    height: 100px;
-  }
-
-  @media (max-width: 992px) {
-    width: 150px;
-    height: 150px;
-  }
-
-  @media (max-width: 768px) {
-    width: 80px;
-    height: 80px;
-  }
-
-  @media (max-width: 480px) {
-    width: 70px;
-    height: 70px;
-  }
-
-  @media (max-width: 360px) {
-    width: 60px;
-    height: 60px;
-  }
+	@media (max-width: 576px) {
+		width: 50px;
+		height: 50px;
+	}
 }
 
 .cart_text {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 
-  @media (max-width: 992px) {
-    gap: 12px;
-  }
+	@media (max-width: 992px) {
+		gap: 12px;
+	}
 
-  @media (max-width: 480px) {
-    gap: 10px;
-  }
+	@media (max-width: 480px) {
+		gap: 10px;
+	}
 
-  h2 {
-    padding-bottom: 0;
-    color: rgba(73, 72, 87, 1);
-    font-family: Roboto, sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    margin: 0;
-    line-height: 1.2;
+	h2 {
+		padding-bottom: 0;
+		color: rgba(73, 72, 87, 1);
+		font-family: Roboto, sans-serif;
+		font-size: 24px;
+		font-weight: 700;
+		margin: 0;
+		line-height: 1.2;
 
-    @media (max-width: 1600px) {
-      font-size: 22px;
-    }
+		@media (max-width: 1600px) {
+			font-size: 22px;
+		}
 
-    @media (max-width: 1280px) {
-      font-size: 20px;
-    }
+		@media (max-width: 1280px) {
+			font-size: 20px;
+		}
 
-    @media (max-width: 992px) {
-      font-size: 19px;
-    }
+		@media (max-width: 992px) {
+			font-size: 19px;
+		}
 
-    @media (max-width: 768px) {
-      font-size: 18px;
-      text-align: center;
-    }
+		@media (max-width: 768px) {
+			font-size: 18px;
+		}
 
-    @media (max-width: 480px) {
-      font-size: 17px;
-    }
+		@media (max-width: 576px) {
+			padding-left: 50px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
+		}
 
-    @media (max-width: 360px) {
-      font-size: 16px;
-    }
-  }
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
+	}
 
-  p {
-    padding-right: 0;
-    color: rgba(73, 72, 87, 1);
-    font-family: Roboto, sans-serif;
-    font-size: 18px;
-    line-height: 1.5;
-    font-weight: 400;
-    margin: 0;
+	p {
+		padding-right: 0;
+		color: rgba(73, 72, 87, 1);
+		font-family: Roboto, sans-serif;
+		font-size: 17px;
+		line-height: 1.1;
+		font-weight: 400;
+		margin: 0;
 
-    @media (max-width: 1600px) {
-      font-size: 17px;
-      line-height: 1.5;
-    }
+		@media (max-width: 1600px) {
+			font-size: 17px;
+		}
 
-    @media (max-width: 1280px) {
-      font-size: 16px;
-      line-height: 1.5;
-    }
+		@media (max-width: 1280px) {
+			font-size: 16px;
+		}
 
-    @media (max-width: 992px) {
-      font-size: 15.5px;
-      line-height: 1.5;
-    }
+		@media (max-width: 992px) {
+			font-size: 15.5px;
+			line-height: 1.2;
+		}
 
-    @media (max-width: 768px) {
-      font-size: 15px;
-      line-height: 1.45;
-      text-align: center;
-    }
+		@media (max-width: 768px) {
+			font-size: 15px;
+			line-height: 1.2;
+		}
 
-    @media (max-width: 480px) {
-      font-size: 14px;
-      line-height: 1.4;
-    }
+		@media (max-width: 576px) {
+			padding-top: 10px;
+			font-size: 14px;
+			line-height: 1.4;
+		}
+		@media (max-width: 480px) {
+			font-size: 14px;
+			line-height: 1.2;
+		}
 
-    @media (max-width: 360px) {
-      font-size: 13.5px;
-      line-height: 1.35;
-    }
-  }
-}
-
-// Медиа-запросы для планшетов (768px - 992px)
-@media (max-width: 992px) and (min-width: 769px) {
-  .cart {
-    flex-direction: row;
-    align-items: flex-start;
-    text-align: left;
-
-    .cart_img {
-      min-width: 20%;
-    }
-
-    .cart_text {
-      h2 {
-        text-align: left;
-      }
-
-      p {
-        text-align: left;
-      }
-    }
-  }
-}
-
-// Медиа-запросы для мобилок (480px - 768px)
-@media (max-width: 768px) and (min-width: 481px) {
-  .cart {
-    flex-direction: column;
-
-    .cart_img {
-      width: 100%;
-    }
-
-    .cart_text {
-      h2 {
-        text-align: center;
-      }
-
-      p {
-        text-align: center;
-      }
-    }
-  }
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+			line-height: 1.2;
+		}
+	}
 }
 
 // Адаптивность для очень маленьких экранов
 @media (max-width: 480px) {
-  .title {
-    font-size: 30px;
-    text-align: left;
-    max-width: 200px;
-  }
+	.title {
+		font-size: 30px;
+		text-align: left;
+		max-width: 200px;
+	}
 
-  .cart {
-    border-radius: 10px;
-    padding: 18px 15px;
+	.cart {
+		border-radius: 10px;
+		padding: 18px 15px;
 
-    .cart_text {
-      h2 {
-        font-size: 16px;
-      }
+		.cart_text {
+			h2 {
+				font-size: 16px;
+			}
 
-      p {
-        font-size: 13.5px;
-      }
-    }
-
-    .image {
-      width: 60px;
-      height: 60px;
-    }
-  }
+			p {
+				font-size: 13.5px;
+			}
+		}
+	}
 }
 
 @media (max-width: 360px) {
-  .title {
-    font-size: 22px;
-  }
+	.title {
+		font-size: 22px;
+	}
 
-  .cart {
-    padding: 15px 12px;
+	.cart {
+		padding: 15px 12px;
 
-    .cart_text {
-      h2 {
-        font-size: 15px;
-      }
+		.cart_text {
+			h2 {
+				font-size: 15px;
+			}
 
-      p {
-        font-size: 13px;
-      }
-    }
-
-    .image {
-      width: 55px;
-      height: 55px;
-    }
-  }
+			p {
+				font-size: 13px;
+			}
+		}
+	}
 }
