--- a/src/components/main-page/Under-hero/styles.module.scss
+++ b/src/components/main-page/Under-hero/styles.module.scss
@@ -2,18 +2,18 @@
 	width: 100%;
 	max-width: 1280px;
 	margin: 0 auto;
-	padding-top: 150px;
+	padding-top: 100px;
 
-	@media (max-width: 1750px) {
-		padding-top: 250px;
-	}
+	// @media (max-width: 1750px) {
+	// 	padding-top: 250px;
+	// }
 
 	@media (max-width: 1300px) {
-		padding-top: 100px;
+		padding-top: 50px;
 	}
 
 	@media (max-width: 1150px) {
-		padding: 50px 20px;
+		padding: 0 20px;
 	}
 }
 
