--- a/src/components/main-page/Services/styles.module.scss
+++ b/src/components/main-page/Services/styles.module.scss
@@ -1,4 +1,7 @@
 .services {
+	width: 100%;
+	max-width: 1920px;
+	margin: 0 auto;
 	background-color: var(--layer-color2);
 	padding-left: 10px;
 	padding-right: 10px;
