--- a/src/components/main-page/Calculator/styles.module.scss
+++ b/src/components/main-page/Calculator/styles.module.scss
@@ -3,9 +3,6 @@
 	max-width: 1920px;
 	margin: 0 auto;
 	padding-top: 100px;
-	@media (max-width: 1024px) {
-	}
-
 	.clipped {
 		position: relative;
 		display: flex;
@@ -17,13 +14,11 @@
 			position: absolute;
 			top: -60px;
 			left: 0;
-			width: 60%;
+			width: 62%;
 			height: 100%;
-			clip-path: polygon(0 0, 100% 0, 75% 100%, 0 100%);
-			display: flex;
-			justify-content: end;
-			align-items: center;
-			@media (max-width: 1024px) {
+			clip-path: polygon(0 0, 89% 0, 73% 100%, 0 100%);
+
+			@media (max-width: 992px) {
 				clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 				top: 0;
 				width: 100%;
@@ -34,19 +29,27 @@
 			&_inner {
 				display: flex;
 				flex-direction: column;
-				padding: 50px 300px 60px 0;
-				@media (max-width: 1680px) {
-					padding: 50px 280px 60px 0;
+				padding: 50px 0 0 300px;
+				@media (max-width: 1800px) {
+					padding: 50px 0 0 250px;
+				}
+				@media (max-width: 1600px) {
+					padding: 40px 0 0 200px;
 				}
 				@media (max-width: 1440px) {
-					padding: 50px 230px 60px 0;
+					padding: 40px 0 0 150px;
 				}
-				@media (max-width: 1280px) {
-					padding: 50px 200px 60px 0;
+				@media (max-width: 1080px) {
+					padding: 20px 0 0 100px;
 				}
 				@media (max-width: 1024px) {
-					flex-direction: row;
-					padding: 30px 0 0 50px;
+					padding: 20px 0 0 90px;
+				}
+				@media (max-width: 992px) {
+					padding: 30px 60px;
+				}
+				@media (max-width: 640px) {
+					padding: 20px 10px;
 				}
 				h1 {
 					color: rgba(245, 245, 245, 1);
@@ -76,13 +79,17 @@
 						font-size: 20px;
 						line-height: 20px;
 					}
-					@media (max-width: 1024px) {
+					@media (max-width: 992px) {
 						font-size: 30px;
 						line-height: 30px;
 					}
 				}
 
 				.ranges {
+					max-width: 60%;
+					@media (max-width: 992px) {
+						max-width: 100%;
+					}
 					&_box1 {
 						list-style: none;
 						margin-bottom: 10px;
@@ -144,11 +151,18 @@
 									#e0e0e0 100%
 								);
 								border-radius: 30px;
+								height: 15px;
 								outline: none;
 								cursor: pointer;
 								position: relative;
 								border: 2px solid rgba(255, 255, 255, 0.3);
 								box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
+								@media (max-width: 1024px) {
+									height: 8px;
+								}
+								@media (max-width: 992px) {
+									height: 15px;
+								}
 
 								&::-webkit-slider-runnable-track {
 									-webkit-appearance: none;
@@ -504,30 +518,29 @@
 							}
 						}
 					}
-					@media (max-width: 1024px) {
-						display: none;
+					@media (max-width: 992px) {
 					}
 				}
 
 				button {
-					margin-top: 20px;
-					margin-left: auto;
+					display: block;
+					margin: 20px 0 0 auto;
 					padding: 15px 25px;
 					border-radius: 30px;
-					border: none;
+					border: 1px solid #ffffff;
 					box-sizing: border-box;
 					border: 1px solid rgba(0, 0, 0, 1), rgba(245, 245, 245, 1);
 					background: var(--accent-color1);
 					color: white;
 					font-size: 18px;
-					font-weight: 900;
+					font-weight: 600;
 					font-family: Roboto, sans-serif;
 					cursor: pointer;
 					transition: all 0.3s ease;
 					box-shadow: 0 4px 15px rgba(255, 153, 51, 0.3),
 						inset 0 1px 0 rgba(255, 255, 255, 0.2);
 					width: 100%;
-					max-width: 200px;
+					max-width: 230px;
 					position: relative;
 					overflow: hidden;
 
@@ -568,6 +581,11 @@
 						font-size: 15px;
 						max-width: 200px;
 					}
+					@media (max-width: 1024px) {
+						padding: 10px 10px;
+						font-size: 14px;
+						max-width: 180px;
+					}
 
 					@media (max-width: 768px) {
 						padding: 16px 40px;
@@ -587,7 +605,6 @@
 						z-index: 1;
 					}
 					@media (max-width: 1024px) {
-						display: none;
 					}
 				}
 			}
@@ -596,6 +613,10 @@
 		&_box_right {
 			width: 60%;
 			height: 100%;
+			@media (max-width: 992px) {
+				visibility: hidden;
+				min-height: 400px;
+			}
 
 			img {
 				width: 100%;
