--- a/src/components/main-page/Rewievs/styles.module.scss
+++ b/src/components/main-page/Rewievs/styles.module.scss
@@ -24,6 +24,30 @@
 		letter-spacing: 0%;
 		padding-bottom: 52px;
 		text-align: center;
+		@media (max-width: 1280px) {
+			font-size: 48px;
+			padding-left: 5%;
+		}
+
+		@media (max-width: 1024px) {
+			font-size: 42px;
+		}
+
+		@media (max-width: 992px) {
+			font-size: 36px;
+			margin-bottom: 30px;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 32px;
+			margin-bottom: 25px;
+		}
+
+		@media (max-width: 480px) {
+			font-size: 28px;
+			margin-bottom: 20px;
+			text-align: left;
+		}
 	}
 
 	.swiperContainer {
