--- a/src/components/main-page/Saved-data/styles.module.scss
+++ b/src/components/main-page/Saved-data/styles.module.scss
@@ -87,6 +87,25 @@
 				padding-top: 10px;
 				color: white;
 				font-size: 50px;
+				@media (max-width: 1280px) {
+					font-size: 48px;
+				}
+
+				@media (max-width: 992px) {
+					font-size: 36px;
+					margin-bottom: 30px;
+				}
+
+				@media (max-width: 768px) {
+					font-size: 32px;
+					margin-bottom: 25px;
+				}
+
+				@media (max-width: 480px) {
+					font-size: 28px;
+					margin-bottom: 20px;
+					text-align: left;
+				}
 
 				@media (max-width: 480px) {
 					font-size: 30px;
@@ -136,7 +155,7 @@
 			margin-bottom: 50px;
 			padding: 18px 50px;
 			border-radius: 30px;
-			border: none;
+			border: 1px solid #ffffff;
 			background-color: #ff9933;
 			color: white;
 			font-size: 18px;
