--- a/src/components/main-page/Services/styles.module.scss
+++ b/src/components/main-page/Services/styles.module.scss
@@ -19,7 +19,30 @@
 		padding-top: 52px;
 		text-align: left;
 		@media (max-width: 1280px) {
-			padding-left: 5%;
+			font-size: 48px;
+		}
+
+		@media (max-width: 1200px) {
+			font-size: 42px;
+		}
+
+		@media (max-width: 992px) {
+			font-size: 36px;
+			padding-bottom: 15px;
+		}
+
+		@media (max-width: 768px) {
+			font-size: 32px;
+		}
+
+		@media (max-width: 480px) {
+			text-align: left;
+			font-size: 28px;
+			padding-bottom: 10px;
+		}
+
+		@media (max-width: 360px) {
+			font-size: 26px;
 		}
 	}
 
@@ -49,11 +72,11 @@
 	}
 
 	.swiper_container {
-		padding: 52px 0;
+		padding: 0 0 20px;
 
 		.swiper {
 			width: 100%;
-			padding: 40px 20px 60px;
+			// padding: 40px 20px 60px;
 
 			.swiper_slide {
 				background-position: center;
@@ -61,6 +84,12 @@
 				width: 300px;
 				height: 400px;
 				transition: all 0.3s ease;
+				@media (max-width: 992px) {
+					width: 350px;
+				}
+				@media (max-width: 640px) {
+					width: 300px;
+				}
 
 				&.swiper-slide-active {
 					transform: scale(1.1);
@@ -110,6 +139,13 @@
 		border-top-left-radius: 60px;
 		border-bottom-right-radius: 60px;
 		overflow: hidden;
+		@media (max-width: 992px) {
+			height: 100%;
+			border-top-left-radius: 30px;
+			border-bottom-left-radius: 30px;
+			border-top-right-radius: 30px;
+			border-bottom-right-radius: 30px;
+		}
 
 		&:hover {
 			transform: scale(1.02);
@@ -117,16 +153,21 @@
 
 		&_img {
 			height: 100%;
-
 			flex: 1;
 			border-top-left-radius: 30px;
 			overflow: hidden;
+			@media (max-width: 992px) {
+				border-top-right-radius: 30px;
+			}
 
 			img {
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
 				object-position: right;
+				@media (max-width: 992px) {
+					object-position: center;
+				}
 			}
 		}
 
@@ -138,10 +179,10 @@
 			align-items: center;
 			padding: 10px 30px;
 
-			// @media (max-width: 992px) {
-			// 	border-bottom-right-radius: 10px;
-			// 	border-bottom-left-radius: 10px;
-			// }
+			@media (max-width: 992px) {
+				padding: 10px 0;
+				display: block;
+			}
 
 			p {
 				color: rgba(73, 72, 87, 1);
@@ -151,6 +192,16 @@
 				line-height: 21.6px;
 				letter-spacing: 0px;
 				text-align: left;
+				@media (max-width: 992px) {
+					font-size: 16px;
+					text-align: center;
+					line-height: 1;
+				}
+				@media (max-width: 640px) {
+					font-size: 15px;
+					text-align: center;
+					line-height: 1;
+				}
 			}
 		}
 	}
@@ -163,32 +214,32 @@
 }
 
 // Адаптация для очень маленьких экранов
-@media (max-width: 576px) {
-	.services {
-		.title {
-			font-size: 40px;
-			line-height: 44px;
-			padding-top: 32px;
-		}
+// @media (max-width: 576px) {
+// 	.services {
+// 		.title {
+// 			font-size: 40px;
+// 			line-height: 44px;
+// 			padding-top: 32px;
+// 		}
 
-		.swiper_container {
-			padding: 32px 0 60px;
+// 		.swiper_container {
+// 			padding: 32px 0 60px;
 
-			.swiper {
-				.swiper_slide {
-					width: 250px;
-					height: 350px;
-				}
-			}
-		}
+// 			.swiper {
+// 				.swiper_slide {
+// 					width: 250px;
+// 					height: 350px;
+// 				}
+// 			}
+// 		}
 
-		.cart {
-			&_desc {
-				p {
-					font-size: 16px;
-					line-height: 1.3;
-				}
-			}
-		}
-	}
-}
+// 		.cart {
+// 			&_desc {
+// 				p {
+// 					font-size: 16px;
+// 					line-height: 1.3;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
