--- a/src/components/layout/header/styles.module.scss
+++ b/src/components/layout/header/styles.module.scss
@@ -25,25 +25,19 @@
 // 		padding: 10px 2%;
 // 	}
 // }
-
-.header {
+.header__container {
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
 	padding: 20px 15%;
 	align-items: center;
 	background-color: #fafafa;
 	z-index: 100;
 	box-shadow: 0 0px 15px #cccccc;
-
 	@media (max-width: 1750px) {
 		padding: 20px 10%;
 	}
-
 	@media (max-width: 1350px) {
 		padding: 20px 10%;
 	}
@@ -57,6 +51,15 @@
 
 	@media (max-width: 400px) {
 		padding: 10px 2%;
+	}
+
+	.header {
+		width: 100%;
+		max-width: 1240px;
+		margin: 0 auto;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 	}
 }
 
