--- a/src/components/main-page/Hero/styles.module.scss
+++ b/src/components/main-page/Hero/styles.module.scss
@@ -9,12 +9,9 @@
 	width: 100%;
 	max-width: 1400px;
 	margin: 0 auto;
-	overflow: hidden;
-	// padding-left: 10%;
-	// padding-right: 10%;
-	height: 75vh;
 	position: relative;
 	display: flex;
+	justify-content: end;
 
 	@media (max-width: 992px) {
 		display: none;
@@ -267,20 +264,18 @@
 // Десктопная версия (остается без изменений)
 .hero_container__left {
 	background-color: var(--layer-color1);
-	width: 59%;
-	max-height: auto;
+	width: 62%;
+	height: 91%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	clip-path: polygon(0 0, 96% 0, 76% 100%, 0 100%);
 	padding: 70px;
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
 	gap: 60px;
-	height: 100%;
-	z-index: 2;
-	clip-path: polygon(0 0, 98% 0, 78% 90%, 0 90%);
-	position: relative;
-	-webkit-box-shadow: 13px 16px 20px -6px rgba(22, 23, 24, 0.2);
-	-moz-box-shadow: 13px 16px 20px -6px rgba(22, 23, 24, 0.2);
-	box-shadow: 13px 16px 20px -6px rgba(22, 23, 24, 0.2);
 
 	@media (max-width: 1600px) {
 		padding: 50px;
@@ -289,36 +284,23 @@
 	@media (max-width: 1450px) {
 		padding: 40px;
 	}
-	@media (max-width: 1200px) {
-		clip-path: polygon(0 0, 98% 0, 80% 83%, 0 83%);
+	@media (max-width: 1120px) {
+		padding: 20px;
 		gap: 40px;
+	}
+	@media (max-width: 1024px) {
 	}
 }
 
 .hero_container__right {
-	background-color: var(--layer-color1);
-	position: absolute;
-	min-width: 75%;
-	right: -13%;
-	top: 355px;
-	transform: translateY(-50%);
-	z-index: 1;
-	width: 50%;
 	clip-path: polygon(25% 0, 100% 0, 100% 100%, 0 100%);
-	@media (max-width: 1350px) {
-		min-width: 77%;
-		top: 300px;
-		right: -15%;
-	}
-	@media (max-width: 1140px) {
-		min-width: 80%;
-		top: 270px;
-		right: -17%;
-	}
+	width: 60%;
+	height: 100%;
 
 	img {
 		object-fit: cover;
 		width: 100%;
+		height: 100%;
 	}
 }
 
@@ -328,6 +310,9 @@
 
 	@media (max-width: 1600px) {
 		font-size: 60px;
+	}
+	@media (max-width: 1200px) {
+		font-size: 56px;
 	}
 }
 
@@ -339,17 +324,26 @@
 	@media (max-width: 1600px) {
 		font-size: 22px;
 	}
+	@media (max-width: 1200px) {
+		font-size: 20px;
+	}
 }
 
 .hero_content {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
+	@media (max-width: 1200px) {
+		gap: 10px;
+	}
 }
 
 .hero_item__container {
 	display: flex;
 	gap: 30px;
+	@media (max-width: 1200px) {
+		gap: 20px;
+	}
 }
 
 .hero_content__item {
@@ -357,6 +351,9 @@
 	align-items: center;
 	gap: 10px;
 	width: 40%;
+	@media (max-width: 1130px) {
+		width: 45%;
+	}
 
 	span {
 		font-family: Roboto, sans-serif;
@@ -366,6 +363,9 @@
 		@media (max-width: 1450px) {
 			font-size: 16px;
 		}
+		// @media (max-width: 1130px) {
+		// 	font-size: 15px;
+		// }
 	}
 
 	img {
