--- a/src/components/main-page/Pluses/styles.module.scss
+++ b/src/components/main-page/Pluses/styles.module.scss
@@ -19,21 +19,21 @@
 
 .container {
 	width: 100%;
-	max-width: 1600px;
+	max-width: 1920px;
 	margin: 0 auto;
-	padding: 0 6%;
+	padding: 0 15px;
 
-	@media (max-width: 1280px) {
-		padding: 0 4%;
-	}
+	// @media (max-width: 1280px) {
+	// 	padding: 0 4%;
+	// }
 
-	@media (max-width: 992px) {
-		padding: 0 20px;
-	}
+	// @media (max-width: 992px) {
+	// 	padding: 0 20px;
+	// }
 
-	@media (max-width: 480px) {
-		padding: 0 15px;
-	}
+	// @media (max-width: 480px) {
+	// 	padding: 0 15px;
+	// }
 }
 
 .pluses_title {
@@ -71,8 +71,9 @@
 
 .pluses_container {
 	width: 100%;
+	max-width: 1240px;
 	min-height: 600px;
-	max-width: 1280px;
+
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: repeat(13, 1fr);
@@ -574,7 +575,7 @@
 }
 
 .image {
-	width: 60%;
+	width: 55%;
 	height: auto;
 	position: absolute;
 	bottom: 0;
