--- a/src/components/main-page/Rewievs/styles.module.scss
+++ b/src/components/main-page/Rewievs/styles.module.scss
@@ -15,6 +15,9 @@
 // }
 .reviews {
 	position: relative;
+	width: 100%;
+	max-width: 1920px;
+	margin: 0 auto;
 
 	.title {
 		color: rgba(73, 72, 87, 1);
@@ -26,7 +29,6 @@
 		text-align: center;
 		@media (max-width: 1280px) {
 			font-size: 48px;
-			padding-left: 5%;
 		}
 
 		@media (max-width: 1024px) {
