--- a/src/components/main-page/Support/styles.module.scss
+++ b/src/components/main-page/Support/styles.module.scss
@@ -18,7 +18,7 @@
 	width: 100%;
 	max-width: 1280px;
 	margin: 0 auto;
-	padding: 0 6%;
+	padding: 0 15px;
 
 	@media (max-width: 1200px) {
 		padding: 0 4%;
