--- a/src/components/services-page/Service/Service.scss
+++ b/src/components/services-page/Service/Service.scss
@@ -9,7 +9,7 @@
 }
 .service-container {
 	width: 100%;
-	max-width: 1280px;
+	max-width: 1240px;
 	margin: 0 auto;
 }
 .service-title {
@@ -18,8 +18,30 @@
 	font-size: 56px;
 	font-weight: 700;
 	line-height: 56px;
+	// @media (max-width: 1280px) {
+	// 	padding-left: 5%;
+	// }
 	@media (max-width: 1280px) {
-		padding-left: 5%;
+		font-size: 48px;
+	}
+
+	@media (max-width: 1024px) {
+		font-size: 42px;
+	}
+
+	@media (max-width: 992px) {
+		font-size: 36px;
+		padding-bottom: 30px;
+	}
+
+	@media (max-width: 768px) {
+		font-size: 32px;
+		padding-bottom: 25px;
+	}
+
+	@media (max-width: 480px) {
+		font-size: 28px;
+		padding-bottom: 20px;
 	}
 }
 .service-body {
