--- a/src/components/tariffs-page/tariffs-mobile/tariffsMobile.scss
+++ b/src/components/tariffs-page/tariffs-mobile/tariffsMobile.scss
@@ -220,7 +220,7 @@
 	&__button {
 		position: fixed;
 		z-index: 100;
-		bottom: 20px;
+		bottom: 50px;
 		left: 15px;
 		width: 198px;
 		height: 65px;
@@ -235,26 +235,36 @@
 		border-radius: 30px;
 		background: rgba(255, 153, 51, 1);
 		cursor: pointer;
-		&:hover {
-			background: var(--hover-color1);
-		}
+		animation: pulse 2s infinite;
+		// &:hover {
+		// 	background: var(--hover-color1);
+		// }
 	}
 
 	// .mobile-tariffs__message
 
-	&__message {
-		position: fixed;
-		z-index: 100;
-		bottom: 20px;
-		right: 15px;
-		width: 65px;
-		height: 65px;
-		border: none;
-		border-radius: 100px;
-		box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
-		background: rgba(255, 153, 51, 1);
-		display: flex;
-		justify-content: center;
-		align-items: center;
+	// &__message {
+	// 	position: fixed;
+	// 	z-index: 100;
+	// 	bottom: 20px;
+	// 	right: 15px;
+	// 	width: 65px;
+	// 	height: 65px;
+	// 	border: none;
+	// 	border-radius: 100px;
+	// 	box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
+	// 	background: rgba(255, 153, 51, 1);
+	// 	display: flex;
+	// 	justify-content: center;
+	// 	align-items: center;
+	// }
+}
+@keyframes pulse {
+	0%,
+	100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.7;
 	}
 }
