--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -229,33 +229,23 @@
 		}
 	}
 }
-.bunner-inner {
-	flex: 1 0 70%;
+.banner-inner {
 	@media (max-width: 1024px) {
-		flex: 1 0 100% !important;
 	}
-	// .bunner-inner__img
 
 	&__img {
-		flex: 0 0 auto;
-		display: block;
-		margin: auto 0;
+		flex-basis: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		@media (max-width: 1024px) {
 			display: none;
 		}
 
 		img {
 			@media (max-width: 1170px) {
-				width: 85%;
-				height: 85%;
-			}
-			@media (max-width: 1120px) {
-				width: 80%;
-				height: 80%;
-			}
-			@media (max-width: 1080px) {
-				width: 65%;
-				height: 65%;
+				width: 100%;
+				height: 100%;
 			}
 		}
 	}
