--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,22 @@ a {
 ul {
 	list-style: none;
 }
+::-webkit-scrollbar {
+	width: 0 !important;
+}
+
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #888;
+	border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
 
 .container {
 	h1 {
