--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -173,7 +173,7 @@
 		border: 2px solid rgba(167, 186, 193, 1);
 		border-radius: 30px;
 		background: rgba(255, 255, 255, 1);
-		color: rgba(153, 153, 153, 1);
+		color: rgba(73, 72, 87, 1);
 		font-family: Roboto;
 		font-size: 18px;
 		font-weight: 400;
@@ -206,12 +206,12 @@
 			width: 240px;
 			height: 50px;
 			margin-bottom: 20px;
-			padding-left: 10px;
+			padding-left: 20px;
 			box-sizing: border-box;
 			border: 2px solid rgba(167, 186, 193, 1);
 			border-radius: 50px;
 			background: rgba(255, 255, 255, 1);
-			color: rgba(153, 153, 153, 1);
+			color: rgba(73, 72, 87, 1);
 			font-family: Roboto;
 			font-size: 18px;
 			font-weight: 400;
@@ -225,6 +225,27 @@
 
 			@media (max-width: 640px) {
 				padding: 10px;
+			}
+			/* Отключаем автозаполнение браузера */
+			&:-webkit-autofill,
+			&:-webkit-autofill:hover,
+			&:-webkit-autofill:focus,
+			&:-webkit-autofill:active {
+				-webkit-box-shadow: 0 0 0 1000px white inset !important;
+				box-shadow: 0 0 0 1000px white inset !important;
+				-webkit-text-fill-color: #333 !important;
+				transition: background-color 5000s ease-in-out 0s;
+			}
+
+			/* Для Firefox и других браузеров */
+			&:autofill {
+				background-color: white !important;
+				color: #333 !important;
+			}
+
+			/* Современный вариант */
+			&[data-autofilled] {
+				background-color: white !important;
 			}
 		}
 	}
