--- a/src/components/one-service-page/OneService.scss
+++ b/src/components/one-service-page/OneService.scss
@@ -29,20 +29,19 @@
 	}
 }
 .one-service-img {
-	border-top-left-radius: 100px;
-	border-bottom-right-radius: 100px;
-	border: 8px solid var(--layer-color1);
-	max-height: 400px;
-	overflow: hidden;
-	@media (max-width: 768px) {
-		border: none;
-		border-radius: 0%;
-	}
+	// border-top-left-radius: 100px;
+	// border-bottom-right-radius: 100px;
+	// border: 8px solid var(--layer-color1);
+	// max-height: 349px;
+	// overflow: hidden;
+	// @media (max-width: 768px) {
+	// 	border: none;
+	// 	border-radius: 0%;
+	// }
 	img {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		object-position: right;
+		// width: 100%;
+		// height: 100%;
+		// object-fit: cover;
 	}
 }
 .one-service-description {
