--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,72 +54,72 @@ ul {
 	background: #555;
 }
 
-.container {
-	h1 {
-		font-size: 60px;
-		font-weight: 400;
-		margin-top: 50px;
-		@media (max-width: 992px) {
-			font-size: 50px;
-			margin-top: 10px;
+/* .container {
+		h1 {
+			font-size: 60px;
+			font-weight: 400;
+			margin-top: 50px;
+			@media (max-width: 992px) {
+				font-size: 50px;
+				margin-top: 10px;
+			}
 		}
-	}
-	@media (min-width: 1440px) and (max-width: 1919px) {
-		padding-left: 15%;
-		padding-right: 15%;
-		margin-top: 120px;
-	}
+		@media (min-width: 1440px) and (max-width: 1919px) {
+			padding-left: 15%;
+			padding-right: 15%;
+			margin-top: 120px;
+		}
 
-	@media (min-width: 1920px) and (max-width: 2559px) {
-		padding-left: 10%;
-		padding-right: 10%;
-		width: 100%;
-		margin-bottom: 120px;
-		margin-top: 120px;
-	}
+		@media (min-width: 1920px) and (max-width: 2559px) {
+			padding-left: 10%;
+			padding-right: 10%;
+			width: 100%;
+			margin-bottom: 120px;
+			margin-top: 120px;
+		}
 
-	@media (min-width: 2560px) and (max-width: 3839px) {
-		padding-left: 22%;
-		padding-right: 22%;
-		margin-bottom: 150px;
-		margin-top: 150px;
-	}
+		@media (min-width: 2560px) and (max-width: 3839px) {
+			padding-left: 22%;
+			padding-right: 22%;
+			margin-bottom: 150px;
+			margin-top: 150px;
+		}
 
-	@media (min-width: 3840px) {
-		padding-left: 25%;
-		padding-right: 25%;
-		margin-bottom: 200px;
-		max-width: 2400px;
-		margin-left: auto;
-		margin-right: auto;
-	}
+		@media (min-width: 3840px) {
+			padding-left: 25%;
+			padding-right: 25%;
+			margin-bottom: 200px;
+			max-width: 2400px;
+			margin-left: auto;
+			margin-right: auto;
+		}
 
-	@media (min-width: 1025px) and (max-width: 1439px) {
-		padding-left: 10%;
-		padding-right: 10%;
-		margin-top: 100px;
-	}
+		@media (min-width: 1025px) and (max-width: 1439px) {
+			padding-left: 10%;
+			padding-right: 10%;
+			margin-top: 100px;
+		}
 
-	@media (max-width: 1024px) {
-		padding-left: 5%;
-		padding-right: 5%;
-		margin-top: 80px;
-	}
+		@media (max-width: 1024px) {
+			padding-left: 5%;
+			padding-right: 5%;
+			margin-top: 80px;
+		}
 
-	@media (max-width: 768px) {
-		padding-left: 4%;
-		padding-right: 4%;
-		margin-bottom: 80px;
-		margin-top: 60px;
-	}
+		@media (max-width: 768px) {
+			padding-left: 4%;
+			padding-right: 4%;
+			margin-bottom: 80px;
+			margin-top: 60px;
+		}
 
-	@media (max-width: 480px) {
-		padding-left: 3%;
-		padding-right: 3%;
-		margin-bottom: 60px;
-		margin-top: 40px;
-	}
-}
+		@media (max-width: 480px) {
+			padding-left: 3%;
+			padding-right: 3%;
+			margin-bottom: 60px;
+			margin-top: 40px;
+		}
+	} */
 
 .swiper {
 	width: 100%;
