--- a/src/components/layout/header/styles.module.scss
+++ b/src/components/layout/header/styles.module.scss
@@ -30,20 +30,23 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	padding: 20px 15%;
+	padding: 20px 15px;
 	align-items: center;
 	background-color: #fafafa;
 	z-index: 100;
 	box-shadow: 0 0px 15px #cccccc;
-	@media (max-width: 1750px) {
-		padding: 20px 10%;
-	}
-	@media (max-width: 1350px) {
-		padding: 20px 10%;
-	}
-	@media (max-width: 1280) {
-		padding: 20px 5%;
-	}
+	// @media (max-width: 1750px) {
+	// 	padding: 20px 10%;
+	// }
+	// @media (max-width: 1350px) {
+	// 	padding: 20px 10%;
+	// }
+	// @media (max-width: 1280) {
+	// 	padding: 20px 5%;
+	// }
+	// @media (max-width: 992) {
+	// 	padding: 20px 15px;
+	// }
 
 	// @media (max-width: 1150px) {
 	// 	padding: 10px 5%;
@@ -55,7 +58,7 @@
 
 	.header {
 		width: 100%;
-		max-width: 1240px;
+		max-width: 1280px;
 		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
