--- a/src/components/main-page/Pluses/styles.module.scss
+++ b/src/components/main-page/Pluses/styles.module.scss
@@ -1,5 +1,5 @@
 .pluses {
-	padding: 60px 0;
+	padding: 50px 0;
 
 	@media (max-width: 992px) {
 		padding: 40px 0;
@@ -73,7 +73,6 @@
 	width: 100%;
 	max-width: 1240px;
 	min-height: 600px;
-
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: repeat(13, 1fr);
@@ -86,53 +85,50 @@
 		grid-template-rows: repeat(15, auto);
 	}
 
-	// @media (max-width: 768px) {
-	// 	gap: 20px;
-	// }
+	@media (max-width: 768px) {
+		gap: 20px;
+	}
 }
 
-.pluses_container_1 {
+.pluses_container_1,
+.pluses_container_2,
+.pluses_container_3,
+.pluses_container_4,
+.pluses_container_5 {
 	position: relative;
-	padding: 30px;
+	padding: 30px 24px 0;
 	border: 1px solid #cccccc;
 	border-radius: 20px;
 	background-color: #fff;
-	grid-column: 1 / 5;
-	grid-row: 1 / 13;
 	height: auto;
 	@media (max-width: 992px) {
-		grid-column: 1 / 13;
-		grid-row: 1 / 5;
+		padding: 20px;
 	}
-	@media (max-width: 640px) {
-		grid-column: 1 / 13;
-		grid-row: 1 / 4;
-	}
-
 	span {
+		display: block;
+		min-width: 100%;
 		font-family: 'Roboto', sans-serif;
-		font-weight: 700;
-		font-size: 24px;
-		line-height: 1.2;
+		font-weight: 600;
+		font-size: 25px;
+		line-height: 1;
 		color: #494857;
-		@media (max-width: 1440px) {
-			font-size: 19px;
+
+		@media (max-width: 1200px) {
+			font-size: 23px;
+		}
+		@media (max-width: 1120px) {
+			font-size: 20px;
 		}
 		@media (max-width: 1200px) {
-			font-size: 16px;
+			font-size: 23px;
 		}
-		@media (max-width: 1024px) {
-			font-size: 15px;
+
+		@media (max-width: 1120px) {
+			font-size: 20px;
 		}
 
 		@media (max-width: 992px) {
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 25px;
-			font-weight: 700;
-			line-height: 100%;
-			letter-spacing: 0px;
-			text-align: left;
+			font-size: 23px;
 		}
 
 		@media (max-width: 640px) {
@@ -154,23 +150,24 @@
 		color: #494857;
 		/* line-height: 22px; */
 		line-height: 1.2;
-		padding-top: 20px;
+		padding: 10px 0;
 		@media (max-width: 1280px) {
+			font-size: 16px;
+		}
+		@media (max-width: 1200px) {
 			font-size: 15.5px;
 		}
 
 		@media (max-width: 992px) {
-			padding-top: 25px;
+			padding: 5px 0;
 			color: rgba(73, 72, 87, 1);
 			font-family: Roboto;
 			font-size: 18px;
 			font-weight: 400;
-			line-height: 100%;
 		}
 
 		@media (max-width: 768px) {
-			font-size: 15px;
-			line-height: 1.45;
+			font-size: 16px;
 		}
 		@media (max-width: 640px) {
 			text-align: left;
@@ -178,13 +175,31 @@
 
 		@media (max-width: 480px) {
 			font-size: 14px;
-			line-height: 1.4;
 		}
 
 		@media (max-width: 360px) {
 			font-size: 13.5px;
-			line-height: 1.35;
 		}
+	}
+}
+
+.pluses_container_1 {
+	grid-column: 1 / 5;
+	grid-row: 1 / 12;
+
+	@media (max-width: 1280px) {
+		grid-row: 1 / 11;
+	}
+	@media (max-width: 992px) {
+		grid-column: 1 / 14;
+		grid-row: 1 / 5;
+	}
+
+	@media (max-width: 640px) {
+		grid-column: 1 / 13;
+		grid-row: 1 / 4;
+	}
+	p {
 		@media (max-width: 992px) {
 			width: 80%;
 		}
@@ -192,19 +207,14 @@
 			width: 100%;
 		}
 	}
-	// @media (max-width: 768px) {
-	// 	grid-column: 1/7;
-	// 	grid-row: 1/2;
-	// }
 }
 .pluses_container_2 {
-	padding: 30px;
-	border: 1px solid #cccccc;
-	border-radius: 20px;
-	background-color: #fff;
 	grid-column: 5/ 10; /* Левая половина */
-	grid-row: 1/ 7; /* Занимает обе строки */
-	height: auto;
+	grid-row: 1/ 4; /* Занимает обе строки */
+	@media (max-width: 1280px) {
+		grid-row: 1 / 3;
+	}
+
 	@media (max-width: 992px) {
 		grid-column: 1 / 7;
 		grid-row: 5 / 9;
@@ -213,186 +223,30 @@
 		grid-column: 1 / 13;
 		grid-row: 4 / 7;
 	}
-	span {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 700;
-		font-size: 24px;
-		line-height: 1.2;
-		color: #494857;
-		@media (max-width: 1440px) {
-			font-size: 19px;
-		}
-		@media (max-width: 1200px) {
-			font-size: 16px;
-		}
-		@media (max-width: 1024px) {
-			font-size: 15px;
-		}
-
-		@media (max-width: 992px) {
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 25px;
-			font-weight: 700;
-			line-height: 100%;
-			letter-spacing: 0px;
-			text-align: left;
-		}
-
-		@media (max-width: 640px) {
-			padding-left: 0;
-			padding-top: 10px;
-		}
-		@media (max-width: 480px) {
-			font-size: 17px;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 16px;
-		}
-	}
-	p {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 400;
-		font-size: 18px;
-		color: #494857;
-		/* line-height: 22px; */
-		line-height: 1.2;
-		padding-top: 20px;
-		@media (max-width: 1280px) {
-			font-size: 15.5px;
-		}
-
-		@media (max-width: 992px) {
-			padding-top: 25px;
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 18px;
-			font-weight: 400;
-			line-height: 100%;
-		}
-
-		@media (max-width: 768px) {
-			font-size: 15px;
-			line-height: 1.45;
-		}
-		@media (max-width: 640px) {
-			text-align: left;
-		}
-
-		@media (max-width: 480px) {
-			font-size: 14px;
-			line-height: 1.4;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 13.5px;
-			line-height: 1.35;
-		}
-	}
 }
 .pluses_container_3 {
-	padding: 30px;
-	border: 1px solid #cccccc;
-	border-radius: 20px;
-	background-color: #fff;
 	grid-column: 10/ 14; /* Левая половина */
-	grid-row: 1/ 7; /* Занимает обе строки */
-	height: auto;
+	grid-row: 1/ 4; /* Занимает обе строки */
+	@media (max-width: 1280px) {
+		grid-row: 1 / 3;
+	}
+
 	@media (max-width: 992px) {
-		grid-column: 7 / 13;
+		grid-column: 7 / 14;
 		grid-row: 5 / 9;
 	}
 	@media (max-width: 640px) {
 		grid-column: 1 / 13;
 		grid-row: 7 / 10;
 	}
-	span {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 700;
-		font-size: 24px;
-		line-height: 1.2;
-		color: #494857;
-		@media (max-width: 1440px) {
-			font-size: 19px;
-		}
-		@media (max-width: 1200px) {
-			font-size: 16px;
-		}
-		@media (max-width: 1024px) {
-			font-size: 15px;
-		}
-
-		@media (max-width: 992px) {
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 25px;
-			font-weight: 700;
-			line-height: 100%;
-			letter-spacing: 0px;
-			text-align: left;
-		}
-
-		@media (max-width: 640px) {
-			padding-left: 0;
-			padding-top: 10px;
-		}
-		@media (max-width: 480px) {
-			font-size: 17px;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 16px;
-		}
-	}
-	p {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 400;
-		font-size: 18px;
-		color: #494857;
-		/* line-height: 22px; */
-		line-height: 1.2;
-		padding-top: 20px;
-		@media (max-width: 1280px) {
-			font-size: 15.5px;
-		}
-
-		@media (max-width: 992px) {
-			padding-top: 25px;
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 18px;
-			font-weight: 400;
-			line-height: 100%;
-		}
-
-		@media (max-width: 768px) {
-			font-size: 15px;
-			line-height: 1.45;
-		}
-		@media (max-width: 640px) {
-			text-align: left;
-		}
-
-		@media (max-width: 480px) {
-			font-size: 14px;
-			line-height: 1.4;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 13.5px;
-			line-height: 1.35;
-		}
-	}
 }
 .pluses_container_4 {
-	padding: 30px;
-	border: 1px solid #cccccc;
-	border-radius: 20px;
-	background-color: #fff;
 	grid-column: 5/ 9; /* Левая половина */
-	grid-row: 7/13; /* Занимает обе строки */
-	height: auto;
+	grid-row: 4/12; /* Занимает обе строки */
+	@media (max-width: 1280px) {
+		grid-row: 3/ 11;
+	}
+
 	@media (max-width: 992px) {
 		grid-column: 1 / 7;
 		grid-row: 9/ 13;
@@ -401,196 +255,44 @@
 		grid-column: 1 / 13;
 		grid-row: 10 / 13;
 	}
-	span {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 700;
-		font-size: 24px;
-		line-height: 1.2;
-		color: #494857;
-		@media (max-width: 1440px) {
-			font-size: 19px;
-		}
-		@media (max-width: 1200px) {
-			font-size: 16px;
-		}
-		@media (max-width: 1024px) {
-			font-size: 15px;
-		}
-
-		@media (max-width: 992px) {
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 25px;
-			font-weight: 700;
-			line-height: 100%;
-			letter-spacing: 0px;
-			text-align: left;
-		}
-
-		@media (max-width: 640px) {
-			padding-left: 0;
-			padding-top: 10px;
-		}
-		@media (max-width: 480px) {
-			font-size: 17px;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 16px;
-		}
-	}
-	p {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 400;
-		font-size: 18px;
-		color: #494857;
-		/* line-height: 22px; */
-		line-height: 1.2;
-		padding-top: 20px;
-		@media (max-width: 1280px) {
-			font-size: 15.5px;
-		}
-
-		@media (max-width: 992px) {
-			padding-top: 25px;
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 18px;
-			font-weight: 400;
-			line-height: 100%;
-		}
-
-		@media (max-width: 768px) {
-			font-size: 15px;
-			line-height: 1.45;
-		}
-		@media (max-width: 640px) {
-			text-align: left;
-		}
-
-		@media (max-width: 480px) {
-			font-size: 14px;
-			line-height: 1.4;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 13.5px;
-			line-height: 1.35;
-		}
-	}
 }
 .pluses_container_5 {
-	padding: 30px;
-	border: 1px solid #cccccc;
-	border-radius: 20px;
-	background-color: #fff;
 	grid-column: 9/14; /* Левая половина */
-	grid-row: 7/13; /* Занимает обе строки */
-	height: auto;
+	grid-row: 4/12; /* Занимает обе строки */
+	@media (max-width: 1280px) {
+		grid-row: 3/ 11;
+	}
+
 	@media (max-width: 992px) {
-		grid-column: 7 / 13;
+		grid-column: 7 / 14;
 		grid-row: 9/ 13;
 	}
 	@media (max-width: 640px) {
 		grid-column: 1 / 13;
 		grid-row: 13 / 16;
 	}
-	span {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 700;
-		font-size: 24px;
-		line-height: 1.2;
-		color: #494857;
-		@media (max-width: 1440px) {
-			font-size: 19px;
-		}
-		@media (max-width: 1200px) {
-			font-size: 16px;
-		}
-		@media (max-width: 1024px) {
-			font-size: 15px;
-		}
-
-		@media (max-width: 992px) {
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 25px;
-			font-weight: 700;
-			line-height: 100%;
-			letter-spacing: 0px;
-			text-align: left;
-		}
-
-		@media (max-width: 640px) {
-			padding-left: 0;
-			padding-top: 10px;
-		}
-		@media (max-width: 480px) {
-			font-size: 17px;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 16px;
-		}
-	}
-	p {
-		font-family: 'Roboto', sans-serif;
-		font-weight: 400;
-		font-size: 18px;
-		color: #494857;
-		/* line-height: 22px; */
-		line-height: 1.2;
-		padding-top: 20px;
-		@media (max-width: 1280px) {
-			font-size: 15.5px;
-		}
-
-		@media (max-width: 992px) {
-			padding-top: 25px;
-			color: rgba(73, 72, 87, 1);
-			font-family: Roboto;
-			font-size: 18px;
-			font-weight: 400;
-			line-height: 100%;
-		}
-
-		@media (max-width: 768px) {
-			font-size: 15px;
-			line-height: 1.45;
-		}
-		@media (max-width: 640px) {
-			text-align: left;
-		}
-
-		@media (max-width: 480px) {
-			font-size: 14px;
-			line-height: 1.4;
-		}
-
-		@media (max-width: 360px) {
-			font-size: 13.5px;
-			line-height: 1.35;
-		}
-	}
 }
 
 .image {
-	width: 55%;
+	width: 57%;
 	height: auto;
 	position: absolute;
 	bottom: 0;
 	left: 50%;
 	transform: translateX(-50%);
-	opacity: 0.5;
-	@media (max-width: 1440px) {
-		width: 55%;
+	opacity: 0.4;
+	@media (max-width: 1280px) {
+		width: 60%;
+	}
+	@media (max-width: 1120px) {
+		width: 60%;
 	}
 	@media (max-width: 992px) {
-		width: 15%;
+		width: 14%;
 		left: 90%;
 	}
 	@media (max-width: 768px) {
-		width: 20%;
+		width: 15%;
 		left: 85%;
 	}
 	@media (max-width: 576px) {
@@ -602,7 +304,7 @@
 		left: 80%;
 	}
 	@media (max-width: 360px) {
-		width: 30%;
+		width: 25%;
 		left: 80%;
 	}
 }
