--- a/src/components/main-page/Protection-ring/style.module.scss
+++ b/src/components/main-page/Protection-ring/style.module.scss
@@ -43,55 +43,90 @@
 	text-align: left;
 	margin-bottom: 30px;
 
+	@media (max-width: 1024px) {
+		font-size: 42px;
+	}
 	@media (max-width: 1080px) {
 		display: block;
-		font-size: 32px;
+		font-size: 42px;
+	}
+
+	@media (max-width: 992px) {
+		font-size: 36px;
+		margin-bottom: 30px;
 	}
 
 	@media (max-width: 768px) {
-		font-size: 28px;
+		font-size: 32px;
 		margin-bottom: 25px;
 	}
 
 	@media (max-width: 480px) {
-		font-size: 24px;
+		font-size: 28px;
 		margin-bottom: 20px;
-		br {
-			display: none;
-		}
-	}
-
-	@media (max-width: 360px) {
-		font-size: 22px;
+		text-align: left;
 	}
 }
 
 .desktop_title {
-	color: rgba(73, 72, 87, 1);
-	font-size: 48px;
-	font-weight: 700;
-	line-height: 1;
-	letter-spacing: 0%;
+	text-align: left;
+	color: #494857;
+	font-size: 56px;
 	margin-bottom: 40px;
+	font-weight: 700;
+	line-height: 1.2;
 
-	@media (max-width: 1600px) {
+	@media (max-width: 1280px) {
 		font-size: 48px;
-	}
-
-	@media (max-width: 1440px) {
-		font-size: 42px;
 	}
 
 	@media (max-width: 1080px) {
 		display: none;
 	}
+	@media (max-width: 1024px) {
+		font-size: 42px;
+	}
+
+	@media (max-width: 992px) {
+		font-size: 36px;
+		margin-bottom: 30px;
+	}
+
+	@media (max-width: 768px) {
+		font-size: 32px;
+		margin-bottom: 25px;
+	}
+
+	@media (max-width: 480px) {
+		font-size: 28px;
+		margin-bottom: 20px;
+		text-align: left;
+	}
+	// color: rgba(73, 72, 87, 1);
+	// font-size: 48px;
+	// font-weight: 700;
+	// line-height: 1;
+	// letter-spacing: 0%;
+	// margin-bottom: 40px;
+
+	// @media (max-width: 1600px) {
+	// 	font-size: 48px;
+	// }
+
+	// @media (max-width: 1440px) {
+	// 	font-size: 42px;
+	// }
+
+	// @media (max-width: 1080px) {
+	// 	display: none;
+	// }
 }
 
 .grid {
 	position: relative;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: 60px;
+	gap: 0;
 	align-items: start;
 
 	@media (max-width: 992px) {
@@ -186,55 +221,64 @@
 		padding-bottom: 10px;
 		margin: 0;
 
-		@media (max-width: 1600px) {
-			font-size: 22px;
+		@media (max-width: 1200px) {
+			font-size: 23px;
+		}
+		@media (max-width: 1120px) {
+			font-size: 20px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 23px;
 		}
 
-		@media (max-width: 1280px) {
+		@media (max-width: 1120px) {
 			font-size: 20px;
 		}
 
 		@media (max-width: 992px) {
-			font-size: 22px;
+			font-size: 23px;
 		}
 
-		@media (max-width: 768px) {
-			font-size: 19px;
-			padding-bottom: 8px;
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
 		}
-
 		@media (max-width: 480px) {
-			font-size: 18px;
-			padding-bottom: 6px;
+			font-size: 17px;
 		}
 
 		@media (max-width: 360px) {
-			font-size: 17px;
+			font-size: 16px;
 		}
 	}
 
 	p {
 		color: rgba(73, 72, 87, 1);
 		font-family: Roboto, sans-serif;
-		font-size: 16px;
+		font-size: 18px;
 		font-weight: 400;
 		line-height: 1.2;
 		margin: 0;
 
-		@media (max-width: 1600px) {
-			font-size: 17px;
-		}
-
 		@media (max-width: 1280px) {
 			font-size: 16px;
 		}
+		@media (max-width: 1200px) {
+			font-size: 15.5px;
+		}
 
 		@media (max-width: 992px) {
-			font-size: 16px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
+			text-align: justify;
 		}
 
 		@media (max-width: 768px) {
 			font-size: 15px;
+		}
+		@media (max-width: 640px) {
 		}
 
 		@media (max-width: 480px) {
