--- a/src/components/main-page/Real-benefit/styles.module.scss
+++ b/src/components/main-page/Real-benefit/styles.module.scss
@@ -1,5 +1,5 @@
 .benefit {
-	padding: 80px 0;
+	padding: 50px 0;
 
 	@media (max-width: 992px) {
 		padding: 60px 0;
@@ -34,6 +34,10 @@
 	margin-bottom: 40px;
 
 	@media (max-width: 1280px) {
+		font-size: 48px;
+	}
+
+	@media (max-width: 1024px) {
 		font-size: 42px;
 	}
 
@@ -50,11 +54,7 @@
 	@media (max-width: 480px) {
 		font-size: 28px;
 		margin-bottom: 20px;
-	}
-
-	@media (max-width: 360px) {
-		font-size: 26px;
-		margin-bottom: 15px;
+		text-align: left;
 	}
 }
 
@@ -153,24 +153,31 @@
 		margin: 0;
 		line-height: 1.2;
 
-		@media (max-width: 1600px) {
-			font-size: 22px;
+		@media (max-width: 1200px) {
+			font-size: 23px;
+		}
+		@media (max-width: 1120px) {
+			font-size: 20px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 23px;
 		}
 
-		@media (max-width: 1280px) {
+		@media (max-width: 1120px) {
 			font-size: 20px;
 		}
 
 		@media (max-width: 992px) {
-			font-size: 19px;
+			font-size: 23px;
 		}
 
-		@media (max-width: 768px) {
-			font-size: 18px;
+		@media (max-width: 640px) {
+			padding-left: 0;
+			padding-top: 10px;
 		}
-
 		@media (max-width: 576px) {
-			padding-left: 50px;
+			padding-left: 45px;
+			padding-top: 0;
 		}
 		@media (max-width: 480px) {
 			font-size: 17px;
@@ -185,86 +192,83 @@
 		padding-right: 0;
 		color: rgba(73, 72, 87, 1);
 		font-family: Roboto, sans-serif;
-		font-size: 17px;
-		line-height: 1.1;
+		font-size: 18px;
+		line-height: 1.2;
 		font-weight: 400;
 		margin: 0;
-
-		@media (max-width: 1600px) {
-			font-size: 17px;
-		}
 
 		@media (max-width: 1280px) {
 			font-size: 16px;
 		}
+		@media (max-width: 1200px) {
+			font-size: 15.5px;
+		}
 
 		@media (max-width: 992px) {
-			font-size: 15.5px;
-			line-height: 1.2;
+			text-align: justify;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
 		}
 
 		@media (max-width: 768px) {
 			font-size: 15px;
-			line-height: 1.2;
+		}
+		@media (max-width: 576px) {
+			padding-top: 8px;
 		}
 
-		@media (max-width: 576px) {
-			padding-top: 10px;
-			font-size: 14px;
-			line-height: 1.4;
-		}
 		@media (max-width: 480px) {
 			font-size: 14px;
-			line-height: 1.2;
 		}
 
 		@media (max-width: 360px) {
 			font-size: 13.5px;
-			line-height: 1.2;
 		}
 	}
 }
 
 // Адаптивность для очень маленьких экранов
-@media (max-width: 480px) {
-	.title {
-		font-size: 30px;
-		text-align: left;
-		max-width: 200px;
-	}
+// @media (max-width: 480px) {
+// 	.title {
+// 		font-size: 30px;
+// 		text-align: left;
+// 		max-width: 200px;
+// 	}
 
-	.cart {
-		border-radius: 10px;
-		padding: 18px 15px;
+// 	.cart {
+// 		border-radius: 10px;
+// 		padding: 18px 15px;
 
-		.cart_text {
-			h2 {
-				font-size: 16px;
-			}
+// 		.cart_text {
+// 			h2 {
+// 				font-size: 16px;
+// 			}
 
-			p {
-				font-size: 13.5px;
-			}
-		}
-	}
-}
+// 			p {
+// 				font-size: 13.5px;
+// 			}
+// 		}
+// 	}
+// }
 
-@media (max-width: 360px) {
-	.title {
-		font-size: 22px;
-	}
+// @media (max-width: 360px) {
+// 	.title {
+// 		font-size: 22px;
+// 	}
 
-	.cart {
-		padding: 15px 12px;
+// 	.cart {
+// 		padding: 15px 12px;
 
-		.cart_text {
-			h2 {
-				font-size: 15px;
-			}
+// 		.cart_text {
+// 			h2 {
+// 				font-size: 15px;
+// 			}
 
-			p {
-				font-size: 13px;
-			}
-		}
-	}
-}
+// 			p {
+// 				font-size: 13px;
+// 			}
+// 		}
+// 	}
+// }
