--- a/src/components/main-page/Support/styles.module.scss
+++ b/src/components/main-page/Support/styles.module.scss
@@ -1,5 +1,5 @@
 .support {
-	padding: 80px 0;
+	padding: 50px 0;
 
 	@media (max-width: 992px) {
 		padding: 60px 0;
@@ -47,13 +47,12 @@
 		font-size: 48px;
 	}
 
-	@media (max-width: 1200px) {
+	@media (max-width: 1024px) {
 		font-size: 42px;
 	}
 
 	@media (max-width: 992px) {
 		font-size: 36px;
-		padding-bottom: 15px;
 	}
 
 	@media (max-width: 768px) {
@@ -61,13 +60,9 @@
 	}
 
 	@media (max-width: 480px) {
-		text-align: left;
 		font-size: 28px;
-		padding-bottom: 10px;
-	}
 
-	@media (max-width: 360px) {
-		font-size: 26px;
+		text-align: left;
 	}
 }
 
@@ -234,69 +229,78 @@
 		line-height: 1.2;
 		margin: 0;
 
-		@media (max-width: 1280px) {
-			font-size: 22px;
-			padding-bottom: 8px;
+		@media (max-width: 1200px) {
+			font-size: 23px;
+		}
+		@media (max-width: 1120px) {
+			font-size: 20px;
 		}
 
-		@media (max-width: 1200px) {
-			font-size: 20px;
-			padding-bottom: 6px;
-		}
 		@media (max-width: 992px) {
-			padding-left: 45px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 20px;
+			font-weight: 600;
+			line-height: 100%;
+			letter-spacing: 0px;
+			padding-left: 40px;
+			padding-bottom: 0;
+			padding-top: 5px;
 		}
-		@media (max-width: 768px) {
-			font-size: 18px;
-		}
+
 		@media (max-width: 640px) {
 			padding-left: 0;
+			padding-top: 10px;
+		}
+		@media (max-width: 480px) {
+			font-size: 17px;
 		}
 
-		// @media (max-width: 480px) {
-		// 	font-size: 18px;
-		// 	padding-bottom: 6px;
-		// }
-
-		// @media (max-width: 360px) {
-		// 	font-size: 17px;
-		// }
+		@media (max-width: 360px) {
+			font-size: 16px;
+		}
 	}
 
 	p {
 		color: rgba(73, 72, 87, 1);
 		font-family: Roboto, sans-serif;
 		font-size: 18px;
-		line-height: 1.4;
+		line-height: 1.2;
 		font-weight: 400;
 		margin: 0;
+		display: block;
+		min-width: 100%;
 
 		@media (max-width: 1280px) {
-			font-size: 17px;
-			line-height: 1.4;
+			font-size: 16px;
+		}
+		@media (max-width: 1200px) {
+			font-size: 15.5px;
 		}
 
-		@media (max-width: 1200px) {
-			font-size: 16px;
-			line-height: 1.4;
-		}
 		@media (max-width: 992px) {
-			padding-top: 20px;
+			padding-top: 25px;
+			color: rgba(73, 72, 87, 1);
+			font-family: Roboto;
+			font-size: 18px;
+			font-weight: 400;
 			text-align: justify;
 		}
+
+		@media (max-width: 768px) {
+			font-size: 15px;
+		}
 		@media (max-width: 640px) {
-			padding-top: 0;
+			padding-top: 10px;
 		}
 
-		// @media (max-width: 480px) {
-		// 	font-size: 14px;
-		// 	line-height: 1.35;
-		// }
+		@media (max-width: 480px) {
+			font-size: 14px;
+		}
 
-		// @media (max-width: 360px) {
-		// 	font-size: 13.5px;
-		// 	line-height: 1.3;
-		// }
+		@media (max-width: 360px) {
+			font-size: 13.5px;
+		}
 	}
 }
 
@@ -352,48 +356,48 @@
 // }
 
 /* ========== СТИЛИ ДЛЯ 480px И МЕНЬШЕ ========== */
-@media (max-width: 480px) {
-	.title {
-		font-size: 24px;
-	}
+// @media (max-width: 480px) {
+// 	.title {
+// 		font-size: 24px;
+// 	}
 
-	.cart {
-		border-radius: 8px;
+// 	.cart {
+// 		border-radius: 8px;
 
-		.cart_count {
-			font-size: 50px;
-		}
+// 		.cart_count {
+// 			font-size: 50px;
+// 		}
 
-		.cart_text {
-			h2 {
-				font-size: 17px;
-			}
+// 		.cart_text {
+// 			h2 {
+// 				font-size: 17px;
+// 			}
 
-			p {
-				font-size: 13.5px;
-			}
-		}
-	}
-}
+// 			p {
+// 				font-size: 13.5px;
+// 			}
+// 		}
+// 	}
+// }
 
-@media (max-width: 360px) {
-	.title {
-		font-size: 22px;
-	}
+// @media (max-width: 360px) {
+// 	.title {
+// 		font-size: 22px;
+// 	}
 
-	.cart {
-		.cart_count {
-			font-size: 45px;
-		}
+// 	.cart {
+// 		.cart_count {
+// 			font-size: 45px;
+// 		}
 
-		.cart_text {
-			h2 {
-				font-size: 16px;
-			}
+// 		.cart_text {
+// 			h2 {
+// 				font-size: 16px;
+// 			}
 
-			p {
-				font-size: 13px;
-			}
-		}
-	}
-}
+// 			p {
+// 				font-size: 13px;
+// 			}
+// 		}
+// 	}
+// }
