--- a/src/components/main-page/Under-hero/styles.module.scss
+++ b/src/components/main-page/Under-hero/styles.module.scss
@@ -63,6 +63,7 @@
 		flex-direction: column;
 		align-items: center;
 		text-align: center;
+		gap: 0;
 	}
 }
 
@@ -104,17 +105,39 @@
 .title {
 	font-family: Roboto, sans-serif;
 	color: #494857;
-	font-size: 24px;
-	font-weight: 600;
-	margin-bottom: 15px;
+	font-size: 25px;
+	font-weight: 700;
+	margin-bottom: 10px;
 	line-height: 1.3;
 
-	@media (max-width: 768px) {
-		font-size: 22px;
+	@media (max-width: 1200px) {
+		font-size: 23px;
+	}
+	@media (max-width: 1120px) {
+		font-size: 20px;
+	}
+	@media (max-width: 1200px) {
+		font-size: 23px;
 	}
 
-	@media (max-width: 480px) {
+	@media (max-width: 1120px) {
 		font-size: 20px;
+	}
+
+	@media (max-width: 992px) {
+		font-size: 23px;
+	}
+
+	@media (max-width: 640px) {
+		padding-left: 0;
+		padding-top: 10px;
+	}
+	@media (max-width: 480px) {
+		font-size: 17px;
+	}
+
+	@media (max-width: 360px) {
+		font-size: 16px;
 	}
 }
 
@@ -125,20 +148,32 @@
 	font-weight: 400;
 	line-height: 1.2;
 	margin: 0;
-
-	/* Десктоп: ограничение ширины текста */
-	@media (min-width: 992px) {
-		max-width: 78%;
-		margin: 0 auto;
+	@media (max-width: 1280px) {
+		font-size: 16px;
+	}
+	@media (max-width: 1200px) {
+		font-size: 15.5px;
 	}
 
-	@media (max-width: 991px) and (min-width: 481px) {
-		max-width: 100%;
+	@media (max-width: 992px) {
+		padding: 5px 0;
+		color: rgba(73, 72, 87, 1);
+		font-family: Roboto;
+		font-size: 18px;
+		font-weight: 400;
+	}
+
+	@media (max-width: 768px) {
+		font-size: 16px;
+	}
+	@media (max-width: 640px) {
 	}
 
 	@media (max-width: 480px) {
-		max-width: 90%;
-		margin: 0 auto;
-		font-size: 15px;
+		font-size: 14px;
+	}
+
+	@media (max-width: 360px) {
+		font-size: 13.5px;
 	}
 }
