--- a/src/components/tariffs-page/tariffs-desktop/tariffsDesktop.scss
+++ b/src/components/tariffs-page/tariffs-desktop/tariffsDesktop.scss
@@ -1,8 +1,11 @@
 .tariffs {
 	position: relative;
 	padding-top: 90px;
+	margin: 0 20px;
 	@media (max-width: 1200px) {
 		padding-top: 70px;
+	}
+	@media (max-width: 400px) {
 		margin: 0 10px;
 	}
 
@@ -23,18 +26,32 @@
 	}
 }
 .tariffs-title {
-	padding: 52px 0;
+	padding: 52px 0 40px;
 	color: rgba(73, 72, 87, 1);
 	font-size: 56px;
 	font-weight: 700;
 	line-height: 56px;
+	// @media (max-width: 1200px) {
+	// 	padding-bottom: 25px;
+	// }
+	// @media (max-width: 640px) {
+	// 	font-size: 33px;
+	// 	line-height: 33px;
+	// 	padding-bottom: 15px;
+	// }
 	@media (max-width: 1200px) {
-		padding-bottom: 25px;
+		font-size: 48px;
+		padding: 52px 0 25px;
 	}
-	@media (max-width: 640px) {
+
+	@media (max-width: 1024px) {
+		font-size: 42px;
+		padding: 40px 0 10px;
+	}
+
+	@media (max-width: 400px) {
+		padding: 20px 0 10px;
 		font-size: 33px;
-		line-height: 33px;
-		padding-bottom: 15px;
 	}
 }
 .tariffs-body {
@@ -200,6 +217,9 @@
 			display: grid;
 			grid-template-columns: 1.5fr repeat(4, 1fr);
 			border-bottom: 1px solid #cccccc;
+			&:nth-last-child(1) {
+				border-bottom: none;
+			}
 			.ttitle {
 				padding: 5px 0;
 				color: rgba(73, 72, 87, 1);
