--- a/src/components/tariffs-page/tariffs-mobile/tariffsMobile.scss
+++ b/src/components/tariffs-page/tariffs-mobile/tariffsMobile.scss
@@ -122,7 +122,7 @@
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	padding: 10px 0;
-	border-bottom: 1px solid rgba(204, 204, 204, 1);
+	border-top: 1px solid rgba(204, 204, 204, 1);
 }
 .mobile-tariffs-econom,
 .mobile-tariffs-lite,
@@ -220,7 +220,7 @@
 	&__button {
 		position: fixed;
 		z-index: 100;
-		bottom: 13px;
+		bottom: 17px;
 		left: 8px;
 		width: 198px;
 		height: 65px;
