--- a/src/components/main-page/Real-benefit/styles.module.scss
+++ b/src/components/main-page/Real-benefit/styles.module.scss
@@ -18,9 +18,8 @@
 	width: 100%;
 	max-width: 1280px;
 	margin: 0 auto;
-
-	@media (max-width: 1280px) {
-		padding: 0 20;
+	@media (max-width: 992px) {
+		padding: 0 20px;
 	}
 }
 
@@ -55,6 +54,13 @@
 		font-size: 28px;
 		margin-bottom: 20px;
 		text-align: left;
+		line-height: 1;
+	}
+}
+.title_br {
+	display: none;
+	@media (max-width: 480px) {
+		display: block;
 	}
 }
 
@@ -86,7 +92,7 @@
 	align-items: flex-start;
 	gap: 20px;
 	border-radius: 12px;
-	padding: 20px;
+	padding: 20px 20px 20px 0;
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
 
 	@media (max-width: 1280px) {
@@ -94,9 +100,12 @@
 	}
 
 	@media (max-width: 992px) {
-		padding: 22px;
+		padding: 22px 22px 22px 0;
 		gap: 22px;
 		background-color: white;
+	}
+	@media (max-width: 640px) {
+		padding: 22px 20px;
 	}
 }
 
@@ -148,7 +157,7 @@
 		padding-bottom: 0;
 		color: rgba(73, 72, 87, 1);
 		font-family: Roboto, sans-serif;
-		font-size: 24px;
+		font-size: 25px;
 		font-weight: 700;
 		margin: 0;
 		line-height: 1.2;
