--- a/src/components/main-page/Rewievs/styles.module.scss
+++ b/src/components/main-page/Rewievs/styles.module.scss
@@ -16,24 +16,25 @@
 
 .container {
 	width: 100%;
-	max-width: 1240px;
+	max-width: 1100px;
 	margin: 0 auto;
 	padding: 80px 0 0;
 
-	@media (max-width: 1300px) {
-		padding: 60px 40px 0;
-	}
-	@media (max-width: 992px) {
-		padding: 40px 40px 0;
-	}
-	@media (max-width: 640px) {
-		padding: 20px 40px 0;
-	}
+	// @media (max-width: 1300px) {
+	// 	padding: 60px 40px 0;
+	// }
+	// @media (max-width: 992px) {
+	// 	padding: 40px 40px 0;
+	// }
+	// @media (max-width: 640px) {
+	// 	padding: 20px 40px 0;
+	// }
 }
 .reviews {
 	position: relative;
 	width: 100%;
-	max-width: 1920px;
+	max-width: 1280px;
+	padding: 0 20px;
 	margin: 0 auto;
 
 	.title {
@@ -87,8 +88,29 @@
 		margin: 0 auto;
 		position: relative;
 		z-index: 1;
-		@media (max-width: 360px) {
+		// @media (max-width: 360px) {
+		// 	max-width: 300px;
+		// }
+		@media (max-width: 1200px) {
+			max-width: 992px;
+		}
+		@media (max-width: 1080px) {
+			max-width: 768px;
+		}
+		@media (max-width: 992px) {
+			max-width: 640px;
+		}
+		@media (max-width: 768px) {
+			max-width: 480px;
+		}
+		@media (max-width: 640px) {
+			max-width: 360px;
+		}
+		@media (max-width: 480px) {
 			max-width: 300px;
+		}
+		@media (max-width: 375px) {
+			max-width: 280px;
 		}
 	}
 
@@ -110,9 +132,48 @@
 			cursor: not-allowed;
 		}
 	}
-
+	.right_button {
+		@media (max-width: 640px) {
+			width: 70%;
+		}
+		@media (max-width: 480px) {
+			width: 50%;
+		}
+	}
+	.left_button {
+		@media (max-width: 640px) {
+			width: 70%;
+		}
+		@media (max-width: 480px) {
+			width: 50%;
+		}
+	}
 	.navButtonPrev {
-		left: -55px;
+		left: -65px;
+		@media (max-width: 1240px) {
+			left: -50px;
+		}
+		@media (max-width: 1200px) {
+			left: -15px;
+		}
+		@media (max-width: 1080px) {
+			left: 70px;
+		}
+		@media (max-width: 1024px) {
+			left: 50px;
+		}
+		@media (max-width: 992px) {
+			left: 60px;
+		}
+		@media (max-width: 875px) {
+			left: 30px;
+		}
+		@media (max-width: 800px) {
+			left: 10px;
+		}
+		@media (max-width: 768px) {
+			left: 0;
+		}
 		// left: 0;
 		// @media (max-width: 1920px) {
 		// 	left: 80px;
@@ -135,11 +196,32 @@
 	}
 
 	.navButtonNext {
-		right: -55px;
-		// right: -300px;
-		// @media (max-width: 1920px) {
-		// 	right: 80px;
-		// }
+		right: -65px;
+
+		@media (max-width: 1240px) {
+			right: -50px;
+		}
+		@media (max-width: 1200px) {
+			right: -15px;
+		}
+		@media (max-width: 1080px) {
+			right: 70px;
+		}
+		@media (max-width: 1024px) {
+			right: 50px;
+		}
+		@media (max-width: 992px) {
+			right: 60px;
+		}
+		@media (max-width: 875px) {
+			right: 30px;
+		}
+		@media (max-width: 800px) {
+			right: 10px;
+		}
+		@media (max-width: 768px) {
+			right: 0;
+		}
 		// @media (max-width: 1860px) {
 		// 	right: -20px;
 		// }
@@ -156,7 +238,13 @@
 		// 	right: -20px;
 		// }
 	}
+	.slideImage {
+		-webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+		-moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+		box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+	}
 	.slideWrapper {
+		padding: 5px;
 		cursor: pointer;
 		transition: transform 0.3s ease;
 
