--- a/src/components/main-page/Saved-data/styles.module.scss
+++ b/src/components/main-page/Saved-data/styles.module.scss
@@ -81,56 +81,88 @@
 		flex-direction: column;
 
 		.mobile_title {
-			background-color: #57889f;
+			background-color: var(--layer-color2);
 			h2 {
-				padding-left: 2%;
+				padding-left: 20px;
 				padding-top: 10px;
 				color: white;
-				font-size: 50px;
-				@media (max-width: 1280px) {
-					font-size: 48px;
-				}
+				line-height: 1;
 
 				@media (max-width: 992px) {
 					font-size: 36px;
-					margin-bottom: 30px;
+					padding: 20px;
 				}
 
 				@media (max-width: 768px) {
 					font-size: 32px;
-					margin-bottom: 25px;
 				}
 
 				@media (max-width: 480px) {
 					font-size: 28px;
-					margin-bottom: 20px;
+
 					text-align: left;
 				}
+				// @media (max-width: 480px) {
+				// 	font-size: 24px;
+				// 	br {
+				// 		display: none;
+				// 	}
+				// }
 
-				@media (max-width: 480px) {
-					font-size: 30px;
+				@media (max-width: 360px) {
+					font-size: 22px;
 				}
 			}
 		}
 
 		.mobile_checkbox_container {
-			background-color: #57889f;
+			background-color: var(--layer-color2);
 			color: white;
 			padding-top: 10px;
 
 			span {
-				padding-left: 2%;
-				font-size: 22px;
+				padding-bottom: 10px;
+				color: #ffffff;
 				font-family: Roboto, sans-serif;
+				font-size: 25px;
+				font-weight: 700;
+				line-height: 1;
+				margin: 0;
 
+				@media (max-width: 1200px) {
+					font-size: 23px;
+				}
+				@media (max-width: 1120px) {
+					font-size: 20px;
+				}
+
+				@media (max-width: 992px) {
+					font-family: Roboto;
+					font-size: 20px;
+					font-weight: 600;
+					line-height: 100%;
+					letter-spacing: 0px;
+					padding-left: 20px;
+					padding-bottom: 0;
+					padding-top: 5px;
+				}
+
+				@media (max-width: 640px) {
+					padding-left: 20px;
+					padding-top: 10px;
+				}
 				@media (max-width: 480px) {
-					font-size: 18px;
+					font-size: 17px;
+				}
+
+				@media (max-width: 360px) {
+					font-size: 16px;
 				}
 			}
 		}
 
 		.mobile_checkbox {
-			padding: 25px 2%;
+			padding: 20px;
 			display: flex;
 			flex-direction: column;
 			gap: 10px;
@@ -140,10 +172,31 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
+
 			span {
-				font-size: 18px;
+				padding: 0 0 0 10px !important;
+				@media (max-width: 992px) {
+					padding-top: 25px;
+					color: #ffffff;
+					font-family: Roboto;
+					font-size: 18px;
+					font-weight: 400;
+					text-align: left;
+				}
+
+				@media (max-width: 768px) {
+					font-size: 15px;
+				}
+				@media (max-width: 640px) {
+					padding-top: 10px;
+				}
+
 				@media (max-width: 480px) {
-					font-size: 16px;
+					font-size: 14px;
+				}
+
+				@media (max-width: 360px) {
+					font-size: 13.5px;
 				}
 			}
 		}
@@ -201,6 +254,9 @@
 }
 
 .clipped_right {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	background-color: var(--layer-color2, #3289a1);
 	position: absolute;
 	right: 0;
@@ -285,17 +341,45 @@
 }
 
 .clipped_right_inner {
-	padding: 55px 0 60px 260px;
-
-	@media (max-width: 1440px) {
-		padding: 55px 0 60px 200px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	transform: translateX(-5%);
+	gap: 45px;
+	@media (max-width: 1700px) {
+		transform: translateX(0);
+		gap: 20px;
 	}
 	@media (max-width: 1440px) {
-		padding: 35px 0 60px 200px;
+		margin-left: 100px;
+	}
+	@media (max-width: 1360px) {
+		transform: translateY(-5%);
+	}
+	@media (max-width: 1200px) {
+		gap: 15px;
+	}
+	@media (max-width: 1150px) {
+		transform: translateY(-8%);
+	}
+	@media (max-width: 1080px) {
+		transform: translateY(-11%);
 	}
 	@media (max-width: 1024px) {
-		padding: 35px 0 60px 170px;
+		transform: translateY(-15%);
 	}
+
+	// padding: 55px 0 60px 260px;
+
+	// @media (max-width: 1440px) {
+	// 	padding: 55px 0 60px 200px;
+	// }
+	// @media (max-width: 1440px) {
+	// 	padding: 35px 0 60px 200px;
+	// }
+	// @media (max-width: 1024px) {
+	// 	padding: 35px 0 60px 170px;
+	// }
 
 	// @media (max-width: 1600px) {
 	// 	padding: 40px 0 50px 200px;
@@ -322,37 +406,51 @@
 	// 	padding: 15px 15px;
 	// }
 }
+// .clipped_right_inner_wrapper {
+// 	display: flex;
+// 	flex-direction: column;
+// 	justify-content: center;
+// 	min-height: max-content;
+// 	gap: 45px;
+// 	@media (max-width: 1800px) {
+// 		gap: 40px;
+// 	}
+// 	@media (max-width: 1710px) {
+// 		gap: 35px;
+// 	}
+// 	@media (max-width: 1440px) {
+// 		gap: 20px;
+// 		margin-left: 100px;
+// 	}
+// }
 
 .title {
-	color: rgba(245, 245, 245, 1);
+	color: #ffffff;
 	font-size: 56px;
-	font-weight: 500;
+	font-weight: 700;
 	line-height: 1;
 
-	@media (max-width: 1800px) {
+	@media (max-width: 1280px) {
 		font-size: 48px;
 	}
 
-	@media (max-width: 1600px) {
+	@media (max-width: 1024px) {
 		font-size: 42px;
 	}
 
-	@media (max-width: 1280px) {
-		font-size: 36px;
-	}
-	@media (max-width: 1080px) {
-		font-size: 28px;
-	}
-
 	@media (max-width: 992px) {
-		font-size: 32px;
-		line-height: 1.1;
+		font-size: 36px;
 	}
 
 	@media (max-width: 768px) {
-		font-size: 28px;
+		font-size: 32px;
 	}
 
+	@media (max-width: 480px) {
+		font-size: 28px;
+
+		text-align: left;
+	}
 	@media (max-width: 480px) {
 		font-size: 24px;
 		br {
@@ -367,53 +465,40 @@
 
 .subtitle {
 	color: rgba(245, 245, 245, 1);
-
 	font-family: Roboto, sans-serif;
-	font-size: 24px;
+	font-size: 25px;
 	font-weight: 600;
 	line-height: 1.2;
 	letter-spacing: 0px;
-	margin: 45px 0;
 
-	@media (max-width: 1800px) {
-		font-size: 22px;
-		padding: 35px 0;
-		margin: 0;
+	@media (max-width: 1200px) {
+		font-size: 23px;
 	}
-
-	@media (max-width: 1600px) {
+	@media (max-width: 1120px) {
 		font-size: 20px;
-		padding: 20px 0;
 	}
-	@media (max-width: 1080px) {
-		font-size: 18px;
-		padding: 10px 0;
+	@media (max-width: 1200px) {
+		font-size: 23px;
 	}
 
-	// @media (max-width: 1280px) {
-	// 	font-size: 18px;
-	// 	padding: 25px 0;
-	// }
+	@media (max-width: 1120px) {
+		font-size: 20px;
+	}
 
 	@media (max-width: 992px) {
-		font-size: 20px;
-		padding: 20px 0;
-		margin: 15px 0;
+		font-size: 23px;
 	}
 
-	@media (max-width: 768px) {
-		font-size: 18px;
-		padding: 15px 0;
+	@media (max-width: 640px) {
+		padding-left: 0;
+		padding-top: 10px;
 	}
-
 	@media (max-width: 480px) {
-		font-size: 16px;
-		padding: 10px 0;
-		margin: 10px 0;
+		font-size: 17px;
 	}
 
 	@media (max-width: 360px) {
-		font-size: 15px;
+		font-size: 16px;
 	}
 }
 
@@ -440,76 +525,83 @@
 	letter-spacing: 0%;
 	text-align: left;
 	list-style: none;
+	@media (max-width: 1440px) {
+		padding: 0 0 5px 30px;
+	}
 
 	&:last-child {
 		padding-bottom: 0;
 	}
 
 	&::before {
-		content: url('/images/saved/checkbox.svg');
+		content: '';
 		position: absolute;
 		width: 25px;
 		height: 25px;
 		top: -2px;
 		left: 0;
+		background-image: url('/images/saved/checkbox.svg');
+		background-size: contain;
+		background-repeat: no-repeat;
+		background-position: center;
 	}
 
-	@media (max-width: 1800px) {
-		font-size: 17px;
-		padding: 0 0 18px 35px;
+	@media (max-width: 1440px) {
+		&::before {
+			content: '';
+			position: absolute;
+			width: 20px;
+			height: 20px;
+			top: 0;
+			left: 0;
+			background-image: url('/images/saved/checkbox.svg');
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+		}
 	}
-
-	@media (max-width: 1600px) {
+	@media (max-width: 1280px) {
 		font-size: 16px;
-		padding: 0 0 10px 35px;
 	}
-	@media (max-width: 1080px) {
-		font-size: 15px;
+	@media (max-width: 1200px) {
+		padding: 0 0 10px 25px;
+		font-size: 15.5px;
+		&::before {
+			content: '';
+			position: absolute;
+			width: 20px;
+			height: 20px;
+			top: 0;
+			left: 0;
+			background-image: url('/images/saved/checkbox.svg');
+			background-size: contain;
+			background-repeat: no-repeat;
+			background-position: center;
+		}
 	}
 
-	// @media (max-width: 1280px) {
-	// 	font-size: 15px;
-	// 	padding: 0 0 14px 35px;
-	// }
+	@media (max-width: 992px) {
+		padding: 5px 0;
+		color: rgba(73, 72, 87, 1);
+		font-family: Roboto;
+		font-size: 18px;
+		font-weight: 400;
+	}
 
-	// @media (max-width: 992px) {
-	// 	font-size: 16px;
-	// 	padding: 0 0 12px 40px;
-	// 	text-align: left;
+	@media (max-width: 768px) {
+		font-size: 16px;
+	}
+	@media (max-width: 640px) {
+		text-align: left;
+	}
 
-	// 	&::before {
-	// 		left: 50%;
-	// 		transform: translateX(-50%);
-	// 		top: -2px;
-	// 	}
-	// }
+	@media (max-width: 480px) {
+		font-size: 14px;
+	}
 
-	// @media (max-width: 768px) {
-	// 	font-size: 15px;
-	// 	padding: 0 0 10px 35px;
-
-	// 	&::before {
-	// 		left: 0;
-	// 		transform: none;
-	// 	}
-	// }
-
-	// @media (max-width: 480px) {
-	// 	font-size: 14px;
-	// 	padding: 0 0 8px 30px;
-	// 	line-height: 1.3;
-
-	// 	&::before {
-	// 		width: 20px;
-	// 		height: 20px;
-	// 		top: 0;
-	// 	}
-	// }
-
-	// @media (max-width: 360px) {
-	// 	font-size: 13px;
-	// 	padding: 0 0 8px 28px;
-	// }
+	@media (max-width: 360px) {
+		font-size: 13.5px;
+	}
 }
 
 .button {
@@ -527,7 +619,6 @@
 	width: 100%;
 	max-width: 250px;
 	display: block;
-	margin-top: 65px;
 
 	&:hover {
 		background-color: #e68a29;
@@ -541,44 +632,37 @@
 	}
 
 	@media (max-width: 1800px) {
-		margin-top: 50px;
 	}
 
 	@media (max-width: 1600px) {
-		margin-top: 30px;
 		padding: 16px 20px;
 		font-size: 16px;
 		max-width: 230px;
 	}
 
 	@media (max-width: 1440px) {
-		margin-top: 30px;
 		padding: 15px 20px;
 		font-size: 16px;
 		max-width: 230px;
 	}
 	@media (max-width: 1280px) {
-		margin-top: 30px;
 		padding: 15px 20px;
 		font-size: 16px;
 		max-width: 230px;
 	}
 
 	@media (max-width: 992px) {
-		margin: 40px auto 0;
 		padding: 16px 40px;
 		max-width: 280px;
 	}
 
 	@media (max-width: 768px) {
-		margin: 30px auto 0;
 		padding: 15px 35px;
 		max-width: 260px;
 		font-size: 16px;
 	}
 
 	@media (max-width: 480px) {
-		margin: 25px auto 0;
 		padding: 14px 30px;
 		max-width: 240px;
 		font-size: 15px;
@@ -586,7 +670,6 @@
 	}
 
 	@media (max-width: 360px) {
-		margin: 20px auto 0;
 		padding: 12px 25px;
 		max-width: 220px;
 		font-size: 14px;
@@ -597,64 +680,3 @@
 		display: inline-block;
 	}
 }
-
-// Медиа-запросы для мобильных устройств
-// @media (max-width: 768px) {
-// 	.saved_data {
-// 		.clipped {
-// 			.clipped_left {
-// 				height: 250px;
-// 			}
-
-// 			.clipped_right {
-// 				padding-top: 30px;
-
-// 				.clipped_right_inner {
-// 					.title {
-// 						font-size: 24px;
-// 					}
-
-// 					.subtitle {
-// 						font-size: 16px;
-// 						margin: 15px 0;
-// 					}
-
-// 					.list li {
-// 						font-size: 14px;
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
-// }
-
-// @media (max-width: 480px) {
-// 	.saved_data {
-// 		.clipped {
-// 			.clipped_left {
-// 				height: 200px;
-// 			}
-
-// 			.clipped_right {
-// 				.clipped_right_inner {
-// 					.title {
-// 						font-size: 22px;
-// 					}
-
-// 					.subtitle {
-// 						font-size: 15px;
-// 					}
-
-// 					.list {
-// 						margin-top: 15px;
-
-// 						li {
-// 							font-size: 13px;
-// 							padding-bottom: 10px;
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
-// 	}
-// }
