--- a/src/components/main-page/Services/styles.module.scss
+++ b/src/components/main-page/Services/styles.module.scss
@@ -3,8 +3,6 @@
 	max-width: 1920px;
 	margin: 0 auto;
 	background-color: var(--layer-color2);
-	padding-left: 10px;
-	padding-right: 10px;
 
 	// @media (max-width: 992px) {
 	// 	padding-left: 0;
@@ -51,23 +49,26 @@
 		display: grid;
 		grid-template-columns: repeat(3, 1fr);
 		justify-items: center;
-		row-gap: 30px;
+		gap: 30px;
 		list-style: none;
 
-		@media (max-width: 1280px) {
-			width: 992px;
-			margin: 0 auto;
-			grid-template-columns: repeat(2, 1fr);
-			li:last-child:nth-child(odd) {
-				grid-column: 1 / -1;
-				display: flex;
-				justify-content: center;
-				width: 100%;
-			}
-		}
+		// @media (max-width: 1280px) {
+		// 	gap: 30px;
+		// }
+		// @media (max-width: 1280px) {
+		// 	width: 992px;
+		// 	margin: 0 auto;
+		// 	grid-template-columns: repeat(2, 1fr);
+		// 	li:last-child:nth-child(odd) {
+		// 		grid-column: 1 / -1;
+		// 		display: flex;
+		// 		justify-content: center;
+		// 		width: 100%;
+		// 	}
+		// }
 
-		@media (max-width: 992px) {
-			display: none;
+		@media (max-width: 1200px) {
+			gap: 20;
 		}
 	}
 
@@ -139,6 +140,18 @@
 		border-top-left-radius: 60px;
 		border-bottom-right-radius: 60px;
 		overflow: hidden;
+		@media (max-width: 1240px) {
+			max-width: 380px;
+			height: 170px;
+		}
+		@media (max-width: 1200px) {
+			max-width: 360px;
+			height: 160px;
+		}
+		@media (max-width: 1120px) {
+			max-width: 340px;
+			height: 150px;
+		}
 		@media (max-width: 992px) {
 			height: 100%;
 			border-top-left-radius: 30px;
@@ -192,6 +205,16 @@
 				line-height: 21.6px;
 				letter-spacing: 0px;
 				text-align: left;
+				@media (max-width: 1200px) {
+					font-size: 16px;
+					text-align: center;
+					line-height: 1;
+				}
+				@media (max-width: 1080px) {
+					font-size: 14px;
+					text-align: center;
+					line-height: 1;
+				}
 				@media (max-width: 992px) {
 					font-size: 16px;
 					text-align: center;
@@ -211,6 +234,7 @@
 	width: 100%;
 	max-width: 1280px;
 	margin: 0 auto;
+	padding: 0 20px;
 }
 
 // Адаптация для очень маленьких экранов
