--- a/src/components/main-page/Start/styles.module.scss
+++ b/src/components/main-page/Start/styles.module.scss
@@ -15,19 +15,19 @@
 	width: 100%;
 	max-width: 1280px;
 	margin: 0 auto;
-	padding: 0 10px;
+	padding: 0 20px;
 
-	@media (max-width: 1280px) {
-		padding: 0 4%;
-	}
+	// @media (max-width: 1280px) {
+	// 	padding: 0 4%;
+	// }
 
-	@media (max-width: 992px) {
-		padding: 0 20px;
-	}
+	// @media (max-width: 992px) {
+	// 	padding: 0 20px;
+	// }
 
-	@media (max-width: 480px) {
-		padding: 0 15px;
-	}
+	// @media (max-width: 480px) {
+	// 	padding: 0 15px;
+	// }
 }
 
 .start_title {
@@ -199,9 +199,9 @@
 
 // Общие стили текста
 .item_title {
-	padding-bottom: 25px;
+	padding-bottom: 10px;
 	font-size: 25px;
-	font-weight: 600;
+	font-weight: 700;
 	color: #494857;
 	display: block;
 
@@ -224,14 +224,18 @@
 	}
 
 	@media (max-width: 640px) {
-		padding-left: 0;
+		text-align: left;
 		padding-top: 10px;
+		padding-left: 60px;
 	}
 	@media (max-width: 480px) {
+		padding-top: 0;
+		padding-left: 45px;
 		font-size: 17px;
 	}
 
 	@media (max-width: 360px) {
+		padding-top: 10px;
 		font-size: 16px;
 	}
 }
@@ -262,12 +266,12 @@
 		line-height: 1.45;
 	}
 	@media (max-width: 640px) {
+		padding-top: 10px;
 		text-align: left;
 	}
 
 	@media (max-width: 480px) {
 		font-size: 14px;
-		text-align: center;
 	}
 
 	@media (max-width: 360px) {
