--- a/src/components/main-page/Under-hero/styles.module.scss
+++ b/src/components/main-page/Under-hero/styles.module.scss
@@ -1,20 +1,20 @@
 .container {
 	width: 100%;
-	max-width: 1240px;
+	max-width: 1280px;
 	margin: 0 auto;
-	padding-top: 30px;
+	padding: 0 20px;
 
 	// @media (max-width: 1750px) {
 	// 	padding-top: 250px;
 	// }
 
-	@media (max-width: 1300px) {
-		padding-top: 50px;
-	}
+	// @media (max-width: 1300px) {
+	// 	padding-top: 50px;
+	// }
 
-	@media (max-width: 1150px) {
-		padding: 0 20px;
-	}
+	// @media (max-width: 1150px) {
+	// 	padding: 0 20px;
+	// }
 }
 
 .underhero_container {
